--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
@@ -5,6 +5,8 @@
 
 - [1. 概述](#1-概述)
 - [2. 客户机物理地址空间](#2-客户机物理地址空间)
+  - [两种内存虚拟化方案](#两种内存虚拟化方案)
+- [四种地址](#四种地址)
 - [3. 地址转换过程](#3-地址转换过程)
 - [4. 影子页表](#4-影子页表)
   - [4.1. 影子页表异常处理机制](#41-影子页表异常处理机制)
@@ -31,19 +33,33 @@
 
 根据上述**客户机物理地址**到**宿主机物理地址**之间的**转换**以及**客户机页表**，即可实现**客户机虚拟地址空间**到**客户机物理地址空间**之间的映射，也即 **GVA** 到 **HPA** 的转换。
 
+## 两种内存虚拟化方案
+
 显然通过这种映射方式，**客户机**的**每次内存访问**都需要 **KVM 介入！！！**，并由**软件进行多次地址转换**，其**效率是非常低**的。因此，为了**提高 GVA 到 HPA 转换的效率**，KVM 提供了**两种实现方式**来进行客户机虚拟地址到宿主机物理地址之间的直接转换。
 
 其一是基于**纯软件**的实现方式，也即通过**影子页表 (Shadow Page Table**) 来实现**客户虚拟地址**到**宿主机物理地址**之间的直接转换。
 
 其二是基于**硬件对虚拟化**的支持，来实现两者之间的转换。下面就详细阐述两种方法在 KVM 上的具体实现。
 
+# 四种地址
+
+1. GVA - Guest虚拟地址
+
+2. GPA - Guest物理地址
+
+3. HVA - Host虚拟地址
+
+4. HPA -Host物理地址
+
+
+
 # 3. 地址转换过程
 
-由于**宿主机MMU不能直接装载客户机的页表！！！**来进行**内存访问**，所以当**客户机**访问**宿主机物理内存**时，需要经过**多次地址转换**。
+由于**宿主机MMU不能直接装载客户机的页表！！！** 来进行**内存访问**，所以当**客户机**访问**宿主机物理内存**时，需要经过**多次地址转换**。
 
 也即**首先**根据**客户机页表**把**客户机虚拟地址**转传成**客户机物理地址**，然后再通过**客户机物理地址**到**宿主机虚拟地址**之间的映射转换成**宿主机虚拟地址**，最后再根据**宿主机页表**把宿主机虚拟地址转换成宿主机物理地址。
 
-注意: **客户机页表基地址(即客户机CR3**)是**客户机物理地址**, 当加载CR3时可以直接通过`kvm\_memory\_slot`进行转换成**宿主机虚拟地址**, 然后**在宿主机进行页表转换**, 得到**客户机页表基地**址的**真实物理地址**.
+注意: **客户机页表基地址(即客户机CR3**)是**客户机物理地址**, 当加载CR3时可以直接通过`kvm_memory_slot`进行转换成**宿主机虚拟地址**, 然后**在宿主机进行页表转换**, 得到**客户机页表基地**址的**真实物理地址**.
 
 # 4. 影子页表
 
