--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
@@ -6,8 +6,8 @@
 - [1. 概述](#1-概述)
 - [2. 客户机物理地址空间](#2-客户机物理地址空间)
 - [四种地址](#四种地址)
-  - [GVA -> GPA](#gva-gpa)
-  - [GPA -> HVA](#gpa-hva)
+  - [客户机虚拟地址到客户机物理地址: GVA -> GPA](#客户机虚拟地址到客户机物理地址-gva-gpa)
+  - [客户机物理地址到主机虚拟地址: GPA -> HVA](#客户机物理地址到主机虚拟地址-gpa-hva)
   - [两种内存虚拟化方案](#两种内存虚拟化方案)
 - [3. 地址转换过程](#3-地址转换过程)
 - [4. 影子页表](#4-影子页表)
@@ -41,22 +41,23 @@
 
 4. HPA -Host物理地址
 
-## GVA -> GPA
+## 客户机虚拟地址到客户机物理地址: GVA -> GPA
 
 Guest OS维护的页表进行传统的操作
 
-## GPA -> HVA
+## 客户机物理地址到主机虚拟地址: GPA -> HVA
 
 由于**客户机物理地址**不能直接用于**宿主机物理MMU**进行寻址，所以需要把**客户机物理地址**转换成**宿主机虚拟地址 (Host Virtual Address, HVA**).
+
+**KVM的虚拟机**实际上运行在**Qemu的进程上下文**中。于是，**虚拟机的物理内存**实际上是**Qemu进程的虚拟地址**。
+
+Kvm要把**虚拟机的物理内存**分成**几个slot**。这是因为，对计算机系统来说，**物理地址**是**不连续**的，除了**bios**和**显存**要编入内存地址，**设备的内存**也可能**映射到内存**了，所以内存实际上是分为一段段的。
+
+![2020-03-30-10-18-24.png](./images/2020-03-30-10-18-24.png)
 
 为此，KVM用一个`kvm_memory_slot`数据结构来记录**每一个地址区间**的**映射关系**，此数据结构包含了对应此映射区间的**起始客户机页帧号 (Guest Frame Number, GFN**)，映射的**内存页数目**以及**起始宿主机虚拟地址**。
 
 于是 KVM就可以实现对**客户机物理地址**到**宿主机虚拟地址**之间的转换，也即首先根据**客户机物理地址**找到**对应的映射区间**，然后根据此**客户机物理地址**在**此映射区间**的**偏移量**就可以得到其**对应的宿主机虚拟地址**。进而再**通过宿主机的页表**也可实现客户机物理地址到宿主机物理地址之间的转换，也即 **GPA 到 HPA** 的转换。
-
-**KVM的虚拟机**实际上运行在**Qemu的进程上下文**中。于是，**虚拟机的物理内存**实际上是**Qemu进程的虚拟地址**。Kvm要把**虚拟机的物理内存**分成**几个slot**。这是因为，对计算机系统来说，**物理地址**是**不连续**的，除了**bios**和**显存**要编入内存地址，**设备的内存**也可能**映射到内存**了，所以内存实际上是分为一段段的。
-
-![2020-03-30-10-18-24.png](./images/2020-03-30-10-18-24.png)
-
 
 
 
@@ -78,7 +79,7 @@ Guest OS维护的页表进行传统的操作
 
 由于**宿主机MMU不能直接装载客户机的页表！！！** 来进行**内存访问**，所以当**客户机**访问**宿主机物理内存**时，需要经过**多次地址转换**。
 
-也即**首先**根据**客户机页表**把**客户机虚拟地址**转传成**客户机物理地址**，然后再通过**客户机物理地址**到**宿主机虚拟地址**之间的映射转换成**宿主机虚拟地址**，最后再根据**宿主机页表**把宿主机虚拟地址转换成宿主机物理地址。
+也即**首先**根据**客户机页表**把**客户机虚拟地址**转换成**客户机物理地址**，然后再通过**客户机物理地址**到**宿主机虚拟地址**之间的映射转换成**宿主机虚拟地址**，最后再根据**宿主机页表**把宿主机虚拟地址转换成宿主机物理地址。
 
 注意: **客户机页表基地址(即客户机CR3**)是**客户机物理地址**, 当加载CR3时可以直接通过`kvm_memory_slot`进行转换成**宿主机虚拟地址**, 然后**在宿主机进行页表转换**, 得到**客户机页表基地**址的**真实物理地址**.
 
