--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -6,7 +6,7 @@
 - [1. 几个缩写](#1-几个缩写)
 - [2. kvm中与内存有关的成员](#2-kvm中与内存有关的成员)
 - [3. kvm_memslots: 虚拟机所有slot信息](#3-kvm_memslots-虚拟机所有slot信息)
-- [4. kvm_mem_slot 结构体: 一个代表一段空间, 虚拟机GPA到主机HVA的映射关系](#4-kvm_mem_slot-结构体-一个代表一段空间-虚拟机gpa到主机hva的映射关系)
+- [4. kvm_mem_slot 结构体: 一个代表一段空间, GPA -> HVA](#4-kvm_mem_slot-结构体-一个代表一段空间-gpa-hva)
 - [5. kvm_mmu 结构体:](#5-kvm_mmu-结构体)
   - [5.1. 与kvm_vcpu, kvm_vcpu_arch之间的关系](#51-与kvm_vcpu-kvm_vcpu_arch之间的关系)
   - [5.2. kvm_mmu 定义: mmu的操作函数](#52-kvm_mmu-定义-mmu的操作函数)
@@ -110,7 +110,7 @@ static struct kvm_memslots *kvm_alloc_memslots(void)
 }
 ```
 
-# 4. kvm_mem_slot 结构体: 一个代表一段空间, 虚拟机GPA到主机HVA的映射关系
+# 4. kvm_mem_slot 结构体: 一个代表一段空间, GPA -> HVA
 
 由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
 
