--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
@@ -237,11 +237,20 @@ EPT 技术在**原有客户机页表**对**客户机虚拟地址**到**客户机
 - **Guest**维护自身的客户页表: `GVA->GPA`
 - **EPT**维护 `GPA->HPA` 的映射
 
-## 流程
-
 **客户机运行**时，**客户机页表**被载入 **物理CR3**，而 **EPT 页表**被载入专门的 **EPT 页表指针寄存器 EPTP**。**EPT 页表对地址的映射机理**与**客户机页表对地址的映射机理相同**，下图 4 出示了一个页面大小为 4K 的映射过程：
 
 ![config](./images/4.png)
+
+## 流程
+
+1. 处于`non-root`**模式**的**CPU**加载**guest进程的gCR3**;
+2. gCR3是**GPA**,cpu需要通过**查询EPT页表**来实现`GPA->HPA`；
+3. 如果没有，CPU触发**EPT Violation**, 由**VMM截获处理**；
+4. 假设**客户机**有**m级页表**，**宿主机EPT**有**n级**，在TLB均miss的最坏情况下，会产生**m*n次内存访问**，完成**一次客户机的地址翻译**；
+
+![2020-03-30-11-17-45.png](./images/2020-03-30-11-17-45.png)
+
+
 
 在**客户机物理地址**到**宿主机物理地址转换**的过程中，由于**缺页、写权限不足等原因**也会**导致客户机退出**，产生 **EPT 异常**。
 
