--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
@@ -19,7 +19,7 @@
   - [5.1. 影子页表异常处理机制](#51-影子页表异常处理机制)
   - [影子页表方案总结](#影子页表方案总结)
 - [6. EPT页表](#6-ept页表)
-  - [流程](#流程)
+  - [地址转换流程](#地址转换流程)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -241,7 +241,7 @@ EPT 技术在**原有客户机页表**对**客户机虚拟地址**到**客户机
 
 ![config](./images/4.png)
 
-## 流程
+## 地址转换流程
 
 1. 处于`non-root`**模式**的**CPU**加载**guest进程的gCR3**;
 2. gCR3是**GPA**,cpu需要通过**查询EPT页表**来实现`GPA->HPA`；
