--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
@@ -90,6 +90,8 @@
 3. 如果没有，CPU触发**EPT Violation**, 由**VMM截获处理**；
 4. 假设**客户机**有**m级页表**，**宿主机EPT**有**n级**，在TLB均miss的最坏情况下，会产生**m*n次内存访问**，完成**一次客户机的地址翻译**；
 
+![2020-03-30-11-40-39.png](./images/2020-03-30-11-40-39.png)
+
 这里假设**客户机页表！！！**和**EPT页表！！！**都是**4级页表**, CPU完成一次地址转换的基本过程如下.
 
 CPU首先查找**Guest CR3**指向的**L4页表**. 由于**Guest CR3**给的是**GPA(！！！客户机物理地址, 不是客户机逻辑地址, 也不是宿主机物理地址！！！**), 因此CPU需要通过**EPT页表！！！**来实现**Guest CR3 GPA→HPA的转换！！！**: CPU首先会查看**硬件的EPT TLB(因为CR3是GPA！！！所以查找的是EPT的TLB！！！**), 如果**没有对应的转换**, CPU会**进一步查找EPT页表**, 如果还没有, CPU则**抛出EPT Violation异常**由**VMM**来处理.
