--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -5,15 +5,15 @@
 
 - [1. 背景](#1-背景)
 - [2. EPT地址转换机制](#2-ept地址转换机制)
-- [EPT页表的建立流程](#ept页表的建立流程)
-- [3. MMU初始化](#3-mmu初始化)
-  - [3.1. 相关变量初始化: kvm模块初始化时](#31-相关变量初始化-kvm模块初始化时)
-  - [3.2. MMU相关操作函数初始化: vcpu创建时](#32-mmu相关操作函数初始化-vcpu创建时)
-    - [3.2.1. MMU的创建](#321-mmu的创建)
-    - [3.2.2. MMU的初始化: vcpu->arch.mmu](#322-mmu的初始化-vcpu-archmmu)
-- [4. 虚拟机的物理内存组织方式](#4-虚拟机的物理内存组织方式)
-- [5. EPT寻址过程](#5-ept寻址过程)
-- [6. 参考](#6-参考)
+- [3. EPT页表的建立流程](#3-ept页表的建立流程)
+- [4. MMU初始化](#4-mmu初始化)
+  - [4.1. 相关变量初始化: kvm模块初始化时](#41-相关变量初始化-kvm模块初始化时)
+  - [4.2. MMU相关操作函数初始化: vcpu创建时](#42-mmu相关操作函数初始化-vcpu创建时)
+    - [4.2.1. MMU的创建](#421-mmu的创建)
+    - [4.2.2. MMU的初始化: vcpu->arch.mmu](#422-mmu的初始化-vcpu-archmmu)
+- [5. 虚拟机的物理内存组织方式](#5-虚拟机的物理内存组织方式)
+- [6. EPT寻址过程](#6-ept寻址过程)
+- [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
 
@@ -66,19 +66,19 @@
 
 PDE的12-51位指向一个4K物理页面，最后根据客户物理地址的最低12位作为偏移，定位到具体的物理地址。
 
-# EPT页表的建立流程
+# 3. EPT页表的建立流程
 
-1. 初始情况下：Guest CR3指向的Guest物理页面为空页面；
-2. Guest页表缺页异常，KVM采用不处理Guest页表缺页的机制，不会导致VM Exit，由Guest的缺页异常处理函数负责分配一个Guest物理页面（GPA），将该页面物理地址回填，建立Guest页表结构；
+1. 初始情况下：**Guest CR3**指向的Guest物理页面为空页面；
+2. **Guest页表缺页异常**，KVM采用**不处理Guest页表缺页**的机制，**不会导致VM Exit**，由**Guest的缺页异常处理函数**负责分配**一个Guest物理页面（GPA**），将该页面物理地址回填，建立**Guest页表结构**；
 3. 完成该映射的过程需要将GPA翻译到HPA，此时该进程相应的EPT页表为空，产生EPT_VIOLATION，虚拟机退出到根模式下执行，由KVM捕获该异常，建立该GPA到HOST物理地址HPA的映射，完成一套EPT页表的建立，中断返回，切换到非根模式继续运行。
 4. VCPU的mmu查询下一级Guest页表，根据GVA的偏移产生一条新的GPA，Guest寻址该GPA对应页面，产生Guest缺页，不发生VM_Exit，由Guest系统的缺页处理函数捕获该异常，从Guest物理内存中选择一个空闲页，将该Guest物理地址GPA回填给Guest页表；
 5. 此时该GPA对应的EPT页表项不存在，发生EPT_VIOLATION，切换到根模式下，由KVM负责建立该GPA->HPA映射，再切换回非根模式；
 6. 如此往复，直到非根模式下GVA最后的偏移建立最后一级Guest页表，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。
 7. 至此，一条GVA对应在真实物理内存单元中的内容，便可通过这一套二维页表结构获得。
 
-# 3. MMU初始化
+# 4. MMU初始化
 
-## 3.1. 相关变量初始化: kvm模块初始化时
+## 4.1. 相关变量初始化: kvm模块初始化时
 
 ```cpp
 vmx_init()                               // 初始化入口
@@ -191,7 +191,7 @@ void kvm_configure_mmu(bool enable_tdp, int tdp_page_level)
 EXPORT_SYMBOL_GPL(kvm_configure_mmu);
 ```
 
-## 3.2. MMU相关操作函数初始化: vcpu创建时
+## 4.2. MMU相关操作函数初始化: vcpu创建时
 
 KVM在**vcpu创建时**创建和初始化MMU，所以说KVM的**MMU**是**每个VCPU独有的**（但是有一些是共享的内容，后面会说到）。
 
@@ -206,7 +206,7 @@ kvm_vm_ioctl()  // 虚拟机vm的ioctl入口
  |   |   |   ├─ init_kvm_tdp_mmu(vcpu);  // 设置回调函数
 ```
 
-### 3.2.1. MMU的创建
+### 4.2.1. MMU的创建
 
 MMU的创建在`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_create()` --> `kvm_mmu_create()`
 
@@ -280,7 +280,7 @@ static int alloc_mmu_pages(struct kvm_vcpu *vcpu, struct kvm_mmu *mmu)
 该函数指定了`arch.walk_mmu`就是arch.mmu的地址，在KVM MMU相关的代码中经常会把`arch.walk_mmu`和`arch.mmu`混用，在这里指定了他们其实是一回事。
 
 
-### 3.2.2. MMU的初始化: vcpu->arch.mmu
+### 4.2.2. MMU的初始化: vcpu->arch.mmu
 
 `kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_create()` --> `kvm_init_mmu()`:
 
@@ -363,7 +363,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 所谓初始化就是填充 `vcpu->arch.mmu` 结构体，里面有很多回调函数都会用到
 
-# 4. 虚拟机的物理内存组织方式
+# 5. 虚拟机的物理内存组织方式
 
 先了解下KVM虚拟机的物理内存组织方式，众所周知，**KVM虚拟机**运行在**qemu的进程地址空间**中，所以其实**虚拟机使用的物理地址**是从对应**qemu进程的地址空间中分配**的。
 
@@ -371,7 +371,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 ![2020-03-17-16-17-51.png](./images/2020-03-17-16-17-51.png)
 
-# 5. EPT寻址过程
+# 6. EPT寻址过程
 
 下面借助于KVM源代码分析下**EPT的构建过程**，其构建模式和普通页表一样，属于**中断触发式**。即**初始页表是空的**，只有在**访问未命中**的时候**引发缺页中断**，然后缺页处理程序**构建页表**。
 
@@ -645,6 +645,6 @@ out_unlock:
 
 
 
-# 6. 参考
+# 7. 参考
 
 https://www.cnblogs.com/ck1020/p/6043054.html
