--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -385,6 +385,10 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |─ kvm_mmu_page_fault(vcpu, gpa, error_code, NULL, 0);   // 处理page fault异常
  |   |   |   ├─ kvm_mmu_do_page_fault(vcpu, cr2_or_gpa, lower_32_bits(error_code), false); // 处理内存访问异常, mmio的见io部分
  |   |   |   |   └─ vcpu->arch.mmu->page_fault(vcpu, cr2_or_gpa, err, prefault);   // EPT下会调用kvm_tdp_page_fault
+ |   |   |   |       └─ direct_page_fault(vcpu, gpa, error_code, prefault, max_level, true);   // EPT下会调用kvm_tdp_page_fault
+ |   |   |   |           ├─ mmu_topup_memory_caches(vcpu);   // 分配缓存池
+ |   |   |   |           ├─ try_async_pf();   // 得到pfn, 物理页框号, HPA
+ |   |   |   |           └─ __direct_map();   // EPT下会调用kvm_tdp_page_fault
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
