--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -388,6 +388,11 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |       └─ direct_page_fault(vcpu, gpa, error_code, prefault, max_level, true);   // EPT下会调用kvm_tdp_page_fault
  |   |   |   |           ├─ mmu_topup_memory_caches(vcpu);   // 分配缓存池
  |   |   |   |           ├─ try_async_pf();   // 得到pfn, 物理页框号, HPA
+ |   |   |   |           |   ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
+ |   |   |   |           |   ├─ *pfn = kvm_vcpu_gfn_to_memslot();   // 得到该gfn(虚拟机页框号)对应的pfn(主机物理页框号)
+ |   |   |   |           |        ├─ addr = __gfn_to_hva_many();   // 得到该gfn(虚拟机页框号)对应的主机虚拟地址, 
+ |   |   |   |           |            ├─ return __gfn_to_hva_memslot(); 
+ |   |   |   |           |                └─ return slot->userspace_addr + (gfn - slot->base_gfn) * PAGE_SIZE; // 这是gfn(虚拟机页框号)对应的
  |   |   |   |           └─ __direct_map();   // EPT下会调用kvm_tdp_page_fault
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
