--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -148,6 +148,7 @@ struct kvm_arch_memory_slot {
 
 struct kvm_memory_slot {
         // 虚拟机物理地址(即GPA)对应的页框号, GPA
+        // 等于: mem->guest_phys_addr >> PAGE_SHIFT;
         gfn_t base_gfn;
         // 当前slot中包含的page数目
         unsigned long npages;
