--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -386,6 +386,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   ├─ kvm_mmu_do_page_fault(vcpu, cr2_or_gpa, lower_32_bits(error_code), false); // 处理内存访问异常, mmio的见io部分
  |   |   |   |   └─ vcpu->arch.mmu->page_fault(vcpu, cr2_or_gpa, err, prefault);   // EPT下会调用kvm_tdp_page_fault
  |   |   |   |       └─ direct_page_fault(vcpu, gpa, error_code, prefault, max_level, true);   // EPT下会调用kvm_tdp_page_fault
+ |   |   |   |           ├─ gfn = gpa >> PAGE_SHIFT;   // 虚拟机物理地址右移12位得到虚拟机物理页框号
  |   |   |   |           ├─ mmu_topup_memory_caches(vcpu);   // 分配缓存池
  |   |   |   |           ├─ try_async_pf();   // 得到pfn, 物理页框号, HPA
  |   |   |   |           |   ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
@@ -394,6 +395,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           |        |   └─ return __gfn_to_hva_memslot(); 
  |   |   |   |           |        |       └─ return slot->userspace_addr + (gfn - slot->base_gfn) * PAGE_SIZE; // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
  |   |   |   |           |        └─ return hva_to_pfn(); // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
+ |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
  |   |   |   |           └─ __direct_map();   // EPT下会调用kvm_tdp_page_fault
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
