--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -5,14 +5,13 @@
 
 - [1. 背景](#1-背景)
 - [2. EPT地址转换机制](#2-ept地址转换机制)
-- [3. EPT页表的建立流程](#3-ept页表的建立流程)
 - [4. MMU初始化](#4-mmu初始化)
   - [4.1. 相关变量初始化: kvm模块初始化时](#41-相关变量初始化-kvm模块初始化时)
   - [4.2. MMU相关操作函数初始化: vcpu创建时](#42-mmu相关操作函数初始化-vcpu创建时)
     - [4.2.1. MMU的创建](#421-mmu的创建)
     - [4.2.2. MMU的初始化: vcpu->arch.mmu](#422-mmu的初始化-vcpu-archmmu)
 - [5. 虚拟机的物理内存组织方式](#5-虚拟机的物理内存组织方式)
-- [6. EPT寻址过程](#6-ept寻址过程)
+- [6. EPT构建过程](#6-ept构建过程)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -65,16 +64,6 @@
 4、根据entry的12-51位定位第四级页表EPT Page-Directory ，然后根据客户物理地址的12-20位定位一个PDE。
 
 PDE的12-51位指向一个4K物理页面，最后根据客户物理地址的最低12位作为偏移，定位到具体的物理地址。
-
-# 3. EPT页表的建立流程
-
-1. 初始情况下：**Guest CR3**指向的Guest物理页面为空页面；
-2. **Guest页表缺页异常**，KVM采用**不处理Guest页表缺页**的机制，**不会导致VM Exit**，由**Guest的缺页异常处理函数**负责分配**一个Guest物理页面（GPA**），将该页面物理地址回填，建立**Guest页表结构**；
-3. 完成该映射的过程需要将**GPA翻译到HPA**，此时**该进程**相应的**EPT页表为空**，产生`EPT_VIOLATION`，虚拟机退出到**根模式**下执行，由KVM捕获该异常，建立**该GPA到HOST物理地址HPA的映射**，完成一套EPT页表的建立，**中断返回**，切换到**非根模式**继续运行。
-4. **VCPU的mmu**查询下一级**Guest页表**，根据GVA的偏移产生一条**新的GPA**，Guest寻址该GPA对应页面，产生**Guest缺页**，**不发生VM_Exit**，由Guest系统的缺页处理函数捕获该异常，从Guest物理内存中选择一个空闲页，将该Guest物理地址GPA回填给Guest页表；
-5. 此时该**GPA**对应的**EPT页表项不存在**，发生`EPT_VIOLATION`，切换到**根模式**下，由KVM负责建立该`GPA->HPA`映射，再切换回非根模式；
-6. 如此往复，直到**非根模式下GVA**最后的偏移建立**最后一级Guest页表**，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。
-7. 至此，**一条GVA**对应在真实物理内存单元中的内容，便可通过这**一套二维页表结构**获得。
 
 # 4. MMU初始化
 
@@ -371,7 +360,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 ![2020-03-17-16-17-51.png](./images/2020-03-17-16-17-51.png)
 
-# 6. EPT寻址过程
+# 6. EPT构建过程
 
 下面借助于KVM源代码分析下**EPT的构建过程**，其构建模式和普通页表一样，属于**中断触发式**。即**初始页表是空的**，只有在**访问未命中**的时候**引发缺页中断**，然后缺页处理程序**构建页表**。
 
@@ -388,15 +377,15 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |       └─ direct_page_fault(vcpu, gpa, error_code, prefault, max_level, true);   // EPT下会调用kvm_tdp_page_fault
  |   |   |   |           ├─ gfn = gpa >> PAGE_SHIFT;   // 虚拟机物理地址右移12位得到虚拟机物理页框号
  |   |   |   |           ├─ mmu_topup_memory_caches(vcpu);   // 分配缓存池
- |   |   |   |           ├─ try_async_pf();   // 得到pfn, 物理页框号, HPA
+ |   |   |   |           ├─ try_async_pf();   // 得到pfn, 主机物理页框号, HPA
  |   |   |   |           |   ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
  |   |   |   |           |   └─ *pfn = __gfn_to_pfn_memslot();   // 得到该gfn(虚拟机页框号)对应的pfn(主机物理页框号)
- |   |   |   |           |        ├─ addr = __gfn_to_hva_many();   // 得到该gfn(虚拟机页框号)对应的主机虚拟地址, 
+ |   |   |   |           |        ├─ addr = __gfn_to_hva_many();   // 得到该gfn(虚拟机页框号)对应的主机虚拟地址
  |   |   |   |           |        |   └─ return __gfn_to_hva_memslot(); 
  |   |   |   |           |        |       └─ return slot->userspace_addr + (gfn - slot->base_gfn) * PAGE_SIZE; // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
- |   |   |   |           |        └─ return hva_to_pfn(); // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
+ |   |   |   |           |        └─ return hva_to_pfn(); // 主机虚拟地址(HVA)转换成主机物理页框号(HPA)
  |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
- |   |   |   |           └─ __direct_map();   // EPT下会调用kvm_tdp_page_fault
+ |   |   |   |           └─ __direct_map();   // 建立EPT页表结构
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
@@ -626,7 +615,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
 
         mmu_seq = vcpu->kvm->mmu_notifier_seq;
         smp_rmb();
-        // 得到PFN
+        // 根据虚拟机物理页框号gfn得到对应的主机虚拟页框号PFN
         if (try_async_pf(vcpu, prefault, gfn, gpa, &pfn, write, &map_writable))
                 return RET_PF_RETRY;
         // 处理反常的物理页框
