--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -13,7 +13,8 @@
 - [4. 虚拟机的物理内存组织方式](#4-虚拟机的物理内存组织方式)
 - [5. EPT构建过程](#5-ept构建过程)
   - [5.1. EPT页表的建立流程](#51-ept页表的建立流程)
-  - [5.2. EPT异常处理整体流程](#52-ept异常处理整体流程)
+  - [](#)
+  - [5.2. EPT异常处理流程](#52-ept异常处理流程)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -378,7 +379,20 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 6. 如此往复，直到**非根模式下GVA**最后的偏移建立**最后一级Guest页表**，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。
 7. 至此，**一条GVA**对应在真实物理内存单元中的内容，便可通过这**一套二维页表结构**获得。
 
-## 5.2. EPT异常处理整体流程
+## 
+
+虚拟机vcpu启动`VCPU_RUN`时
+
+```
+vcpu_enter_guest()
+  kvm_mmu_reload(vcpu)
+    kvm_mmu_load(vcpu);
+      mmu_topup_memory_caches(vcpu); // 分配缓存
+```
+
+
+
+## 5.2. EPT异常处理流程
 
 ```cpp
 vmx_handle_exit()  // vmxexit的入口
