--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -383,11 +383,16 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 虚拟机vcpu启动`VCPU_RUN`时
 
-```
+```cpp
 vcpu_enter_guest()
   kvm_mmu_reload(vcpu)
     kvm_mmu_load(vcpu);
-      mmu_topup_memory_caches(vcpu); // 分配缓存
+      mmu_topup_memory_caches(vcpu); // 分配缓存池
+      mmu_alloc_roots(vcpu);
+      kvm_mmu_sync_roots(vcpu);
+      kvm_mmu_load_pgd(vcpu); // 加载pgd, 即
+        kvm_x86_ops->load_mmu_pgd(); // 调用 vmc_load_mmu_pgd()
+      kvm_x86_ops->tlb_flush(vcpu, true);
 ```
 
 
@@ -669,7 +674,7 @@ out_unlock:
 }
 ```
 
-调用`mmu_topup_memory_caches`函数进行缓存池的分配，官方的解释是为了避免在运行时分配空间失败，这里提前分配浩足额的空间，便于运行时使用。该部分内容最后单独详解。
+调用`mmu_topup_memory_caches`函数进行**缓存池的分配**，官方的解释是为了避免在运行时分配空间失败，这里提前分配浩足额的空间，便于运行时使用。该部分内容最后单独详解。
 
 然后调用`mapping_level_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
 
