--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -395,6 +395,43 @@ vcpu_enter_guest()
       kvm_x86_ops->tlb_flush(vcpu, true);
 ```
 
+```cpp
+void vmx_load_mmu_pgd(struct kvm_vcpu *vcpu, unsigned long cr3)
+{
+        struct kvm *kvm = vcpu->kvm;
+        bool update_guest_cr3 = true;
+        unsigned long guest_cr3;
+        u64 eptp;
+
+        guest_cr3 = cr3;
+        if (enable_ept) {
+                eptp = construct_eptp(vcpu, cr3);
+                vmcs_write64(EPT_POINTER, eptp);
+
+                if (kvm_x86_ops->tlb_remote_flush) {
+                        spin_lock(&to_kvm_vmx(kvm)->ept_pointer_lock);
+                        to_vmx(vcpu)->ept_pointer = eptp;
+                        to_kvm_vmx(kvm)->ept_pointers_match
+                                = EPT_POINTERS_CHECK;
+                        spin_unlock(&to_kvm_vmx(kvm)->ept_pointer_lock);
+                }
+
+                /* Loading vmcs02.GUEST_CR3 is handled by nested VM-Enter. */
+                if (is_guest_mode(vcpu))
+                        update_guest_cr3 = false;
+                else if (!enable_unrestricted_guest && !is_paging(vcpu))
+                        guest_cr3 = to_kvm_vmx(kvm)->ept_identity_map_addr;
+                else if (test_bit(VCPU_EXREG_CR3, (ulong *)&vcpu->arch.regs_avail))
+                        guest_cr3 = vcpu->arch.cr3;
+                else /* vmcs01.GUEST_CR3 is already up-to-date. */
+                        update_guest_cr3 = false;
+                ept_load_pdptrs(vcpu);
+        }
+
+        if (update_guest_cr3)
+                vmcs_writel(GUEST_CR3, guest_cr3);
+}
+```
 
 
 ## 5.2. EPT异常处理流程
