--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -391,7 +391,7 @@ vcpu_enter_guest()
       mmu_alloc_roots(vcpu);
       kvm_mmu_sync_roots(vcpu);
       kvm_mmu_load_pgd(vcpu); // 加载pgd, 即cr3
-        kvm_x86_ops->load_mmu_pgd(); // 调用 vmc_load_mmu_pgd()
+        kvm_x86_ops->load_mmu_pgd(vcpu, vcpu->arch.mmu->root_hpa); // 调用 vmx_load_mmu_pgd()
       kvm_x86_ops->tlb_flush(vcpu, true);
 ```
 
