--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -402,8 +402,9 @@ void vmx_load_mmu_pgd(struct kvm_vcpu *vcpu, unsigned long cr3)
         bool update_guest_cr3 = true;
         unsigned long guest_cr3;
         u64 eptp;
-
+        // 初始状态, 传入
         guest_cr3 = cr3;
+        // 开启ept
         if (enable_ept) {
                 eptp = construct_eptp(vcpu, cr3);
                 vmcs_write64(EPT_POINTER, eptp);
