--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -13,8 +13,8 @@
 - [4. 虚拟机的物理内存组织方式](#4-虚拟机的物理内存组织方式)
 - [5. EPT构建过程](#5-ept构建过程)
   - [5.1. EPT页表的建立流程](#51-ept页表的建立流程)
-  - [](#)
-  - [5.2. EPT异常处理流程](#52-ept异常处理流程)
+  - [5.2. 虚拟机EPT和CR3更新](#52-虚拟机ept和cr3更新)
+  - [5.3. EPT异常处理流程](#53-ept异常处理流程)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -379,9 +379,9 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 6. 如此往复，直到**非根模式下GVA**最后的偏移建立**最后一级Guest页表**，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。
 7. 至此，**一条GVA**对应在真实物理内存单元中的内容，便可通过这**一套二维页表结构**获得。
 
-## 
+## 5.2. 虚拟机EPT和CR3更新
 
-虚拟机vcpu启动`VCPU_RUN`时
+在虚拟机vcpu启动`VCPU_RUN`时
 
 ```cpp
 vcpu_enter_guest()
@@ -402,7 +402,7 @@ void vmx_load_mmu_pgd(struct kvm_vcpu *vcpu, unsigned long cr3)
         bool update_guest_cr3 = true;
         unsigned long guest_cr3;
         u64 eptp;
-        // 初始状态, 传入
+        // 初始状态, 传入的是 INVALID_PAGE
         guest_cr3 = cr3;
         // 开启ept
         if (enable_ept) {
@@ -435,7 +435,7 @@ void vmx_load_mmu_pgd(struct kvm_vcpu *vcpu, unsigned long cr3)
 ```
 
 
-## 5.2. EPT异常处理流程
+## 5.3. EPT异常处理流程
 
 ```cpp
 vmx_handle_exit()  // vmxexit的入口
