--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -13,7 +13,7 @@
 - [4. 虚拟机的物理内存组织方式](#4-虚拟机的物理内存组织方式)
 - [5. EPT构建过程](#5-ept构建过程)
   - [5.1. EPT页表的建立流程](#51-ept页表的建立流程)
-  - [5.2. 虚拟机EPT和CR3更新](#52-虚拟机ept和cr3更新)
+  - [5.2. 虚拟机EPT和CR3初始化](#52-虚拟机ept和cr3初始化)
   - [5.3. EPT异常处理流程](#53-ept异常处理流程)
 - [6. 参考](#6-参考)
 
@@ -379,9 +379,9 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 6. 如此往复，直到**非根模式下GVA**最后的偏移建立**最后一级Guest页表**，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。
 7. 至此，**一条GVA**对应在真实物理内存单元中的内容，便可通过这**一套二维页表结构**获得。
 
-## 5.2. 虚拟机EPT和CR3更新
+## 5.2. 虚拟机EPT和CR3初始化
 
-在虚拟机vcpu启动`VCPU_RUN`时
+在虚拟机vcpu启动`VCPU_RUN`时初始化
 
 ```cpp
 vcpu_enter_guest()
@@ -658,6 +658,7 @@ int kvm_tdp_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
 }
 ```
 
+调用`direct_page_fault()`
 
 ```cpp
 static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
@@ -701,7 +702,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
                 goto out_unlock;
         if (make_mmu_pages_available(vcpu) < 0)
                 goto out_unlock;
-        //修正EPT
+        // 建立EPT页表结构
         r = __direct_map(vcpu, gpa, write, map_writable, max_level, pfn,
                          prefault, is_tdp && lpage_disallowed);
 
@@ -716,6 +717,15 @@ out_unlock:
 
 然后调用`mapping_level_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
 
+`__direct_map()`中, 对**非叶子节点**的处理调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中。对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
+
+kvm_mmu_get_page函数是**创建mmu页结构**的函数，在该函数主要流程如下：
+
+1. 设置role
+2. 通过role和gfn在反向映射表中查找kvm mmu page，如果存在之前创建过的page，则返回该page
+3. 调用`kvm_mmu_alloc_page`创建新的`struct kvm_mmu_page`
+4. 调用`hlist_add_head`将该页加入到`kvm->arch.mmu_page_hash`哈希表中
+5. 调用`init_shadow_page_table`初始化对应的spt
 
 
 
