--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -450,6 +450,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |       └─ direct_page_fault(vcpu, gpa, error_code, prefault, max_level, true);   // EPT下会调用kvm_tdp_page_fault
  |   |   |   |           ├─ gfn = gpa >> PAGE_SHIFT;   // 虚拟机物理地址右移12位得到虚拟机物理页框号
  |   |   |   |           ├─ mmu_topup_memory_caches(vcpu);   // 分配缓存池
+ |   |   |   |           ├─ fast_page_fault();   // 快速page fault处理
  |   |   |   |           ├─ try_async_pf();   // 得到pfn, 主机物理页框号, HPA
  |   |   |   |           |   ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
  |   |   |   |           |   └─ *pfn = __gfn_to_pfn_memslot();   // 得到该gfn(虚拟机页框号)对应的pfn(主机物理页框号), 即GPA到HPA的转换
@@ -683,7 +684,8 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
         // 大页不开, 1
         if (lpage_disallowed)
                 max_level = PT_PAGE_TABLE_LEVEL;
-
+        // 快速处理 violation
+        // 只有当GFN对应的物理页存在且violation是由读写操作引起的，才可以使用快速处理，因为这样不用加MMU-lock.
         if (fast_page_fault(vcpu, gpa, error_code))
                 return RET_PF_RETRY;
 
@@ -717,17 +719,72 @@ out_unlock:
 
 然后调用`mapping_level_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
 
-`__direct_map()`中, 对**非叶子节点**的处理调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中。对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
+接着调用了`fast_page_fault`尝试快速处理violation，只有当GFN对应的物理页存在且violation是由读写操作引起的，才可以使用快速处理，因为这样不用加`MMU-lock`.
 
-kvm_mmu_get_page函数是**创建mmu页结构**的函数，在该函数主要流程如下：
+假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据GFN获取对应的PFN，这个过程具体来说需要首先获取GFN对应的slot，转化成HVA，接着就是**正常的HOST地址翻译的过程**了，如果HVA对应的地址并不在内存中，还需要**HOST自己处理缺页中断**。
+
+`__direct_map()`是构建页表的核心函数, 
+
+```cpp
+static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
+                        int map_writable, int max_level, kvm_pfn_t pfn,
+                        bool prefault, bool account_disallowed_nx_lpage)
+{
+        struct kvm_shadow_walk_iterator it;
+        struct kvm_mmu_page *sp;
+        int level, ret;
+        gfn_t gfn = gpa >> PAGE_SHIFT;
+        gfn_t base_gfn = gfn;
+
+        if (WARN_ON(!VALID_PAGE(vcpu->arch.mmu->root_hpa)))
+                return RET_PF_RETRY;
+
+        level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);
+
+        trace_kvm_mmu_spte_requested(gpa, level, pfn);
+        // 根据GFN遍历EPT页表的对应项
+        for_each_shadow_entry(vcpu, gpa, it) {
+                /*
+                 * We cannot overwrite existing page tables with an NX
+                 * large page, as the leaf could be executable.
+                 */
+                disallowed_hugepage_adjust(it, gfn, &pfn, &level);
+
+                base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
+                // entry的level和请求的level相等, 说明该entry引起的violation
+                if (it.level == level)
+                        break;
+
+                drop_large_spte(vcpu, it.sptep);
+                /* 判断当前entry指向的页表是否存在，不存在的话需要建立 */
+                if (!is_shadow_present_pte(*it.sptep)) {
+                        sp = kvm_mmu_get_page(vcpu, base_gfn, it.addr,
+                                              it.level - 1, true, ACC_ALL);
+
+                        link_shadow_page(vcpu, it.sptep, sp);
+                        if (account_disallowed_nx_lpage)
+                                account_huge_nx_page(vcpu->kvm, sp);
+                }
+        }
+
+        ret = mmu_set_spte(vcpu, it.sptep, ACC_ALL,
+                           write, level, base_gfn, pfn, prefault,
+                           map_writable);
+        direct_pte_prefetch(vcpu, it.sptep);
+        ++vcpu->stat.pf_fixed;
+        return ret;
+}
+```
+
+对**非叶子节点**的处理调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中。对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
+
+`kvm_mmu_get_page`函数是**创建mmu页结构**的函数，在该函数主要流程如下：
 
 1. 设置role
 2. 通过role和gfn在反向映射表中查找kvm mmu page，如果存在之前创建过的page，则返回该page
 3. 调用`kvm_mmu_alloc_page`创建新的`struct kvm_mmu_page`
 4. 调用`hlist_add_head`将该页加入到`kvm->arch.mmu_page_hash`哈希表中
 5. 调用`init_shadow_page_table`初始化对应的spt
-
-
 
 # 6. 参考
 
