--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -717,8 +717,6 @@ out_unlock:
 
 调用`mmu_topup_memory_caches`函数进行**缓存池的分配**，官方的解释是为了避免在运行时分配空间失败，这里提前分配浩足额的空间，便于运行时使用。该部分内容最后单独详解。
 
-然后调用`mapping_level_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
-
 接着调用了`fast_page_fault`尝试快速处理violation，只有当GFN对应的物理页存在且violation是由读写操作引起的，才可以使用快速处理，因为这样不用加`MMU-lock`.
 
 假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据GFN获取对应的PFN，这个过程具体来说需要首先获取GFN对应的slot，转化成HVA，接着就是**正常的HOST地址翻译的过程**了，如果HVA对应的地址并不在内存中，还需要**HOST自己处理缺页中断**。
@@ -738,7 +736,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
         if (WARN_ON(!VALID_PAGE(vcpu->arch.mmu->root_hpa)))
                 return RET_PF_RETRY;
-
+        // 对level和gfn、pfn做出调整
         level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);
 
         trace_kvm_mmu_spte_requested(gpa, level, pfn);
@@ -751,7 +749,8 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                 disallowed_hugepage_adjust(it, gfn, &pfn, &level);
 
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
-                // entry的level和请求的level相等, 说明该entry引起的violation
+                // entry的level和请求的level相等, 说明该entry引起的violation, 
+                // 即该entry对应的下级页或者页表不在内存中，或者直接为NULL。
                 if (it.level == level)
                         break;
 
@@ -775,6 +774,59 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         return ret;
 }
 ```
+
+先调用 `kvm_mmu_hugepage_adjust()` 对level和gfn、pfn做出调整
+
+```cpp
+static int kvm_mmu_hugepage_adjust(struct kvm_vcpu *vcpu, gfn_t gfn,
+                                   int max_level, kvm_pfn_t *pfnp)
+{
+        struct kvm_memory_slot *slot;
+        struct kvm_lpage_info *linfo;
+        kvm_pfn_t pfn = *pfnp;
+        kvm_pfn_t mask;
+        int level;
+
+        if (unlikely(max_level == PT_PAGE_TABLE_LEVEL))
+                return PT_PAGE_TABLE_LEVEL;
+
+        if (is_error_noslot_pfn(pfn) || kvm_is_reserved_pfn(pfn))
+                return PT_PAGE_TABLE_LEVEL;
+
+        slot = gfn_to_memslot_dirty_bitmap(vcpu, gfn, true);
+        if (!slot)
+                return PT_PAGE_TABLE_LEVEL;
+
+        max_level = min(max_level, max_page_level);
+        for ( ; max_level > PT_PAGE_TABLE_LEVEL; max_level--) {
+                linfo = lpage_info_slot(gfn, slot, max_level);
+                if (!linfo->disallow_lpage)
+                        break;
+        }
+
+        if (max_level == PT_PAGE_TABLE_LEVEL)
+                return PT_PAGE_TABLE_LEVEL;
+
+        level = host_pfn_mapping_level(vcpu, gfn, pfn, slot);
+        if (level == PT_PAGE_TABLE_LEVEL)
+                return level;
+
+        level = min(level, max_level);
+
+        /*
+         * mmu_notifier_retry() was successful and mmu_lock is held, so
+         * the pmd can't be split from under us.
+         */
+        mask = KVM_PAGES_PER_HPAGE(level) - 1;
+        VM_BUG_ON((gfn & mask) != (pfn & mask));
+        *pfnp = pfn & ~mask;
+
+        return level;
+}
+```
+
+
+然后调用`mapping_level_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
 
 对**非叶子节点**的处理调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中。对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
 
