--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -15,6 +15,7 @@
   - [5.1. EPT页表的建立流程](#51-ept页表的建立流程)
   - [5.2. 虚拟机EPT和CR3初始化](#52-虚拟机ept和cr3初始化)
   - [5.3. EPT异常处理流程](#53-ept异常处理流程)
+    - [EPT异常处理入口](#ept异常处理入口)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -463,6 +464,8 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
+### EPT异常处理入口
+
 **初始状态EPT页表为空**，当**客户机运行**时，其使用的**GVA转化成GPA**后，还需要CPU根据**GPA查找EPT**，从而**定位具体的HPA**，但是由于此时**EPT为空**，所以会引发**缺页中断**，发生**VM-exit**, 此时**CPU进入到根模式**，运行VMM（这里指KVM），进入`vmx_handle_exit`函数, 在KVM中定义了一个**异常处理数组**来处理**对应的VM-exit**
 
 ```cpp
@@ -636,9 +639,27 @@ static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
 }
 ```
 
-这里就会调用上面初始化的`kvm_tdp_page_fault()`
+这里就会调用上面初始化的`kvm_tdp_page_fault()`, 该函数用于完成EPT表项的建立. 而**GFN**和**PFN**就一个**转换关系**，这就是**影子页表(或EPT)完成的映射**
 
 ```cpp
+// arch/x86/include/asm/kvm_host.h
+/* KVM Hugepage definitions for x86 */
+enum {
+        PT_PAGE_TABLE_LEVEL   = 1,
+        PT_DIRECTORY_LEVEL    = 2,
+        PT_PDPE_LEVEL         = 3,
+        /* set max level to the biggest one */
+        PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
+};
+#define KVM_NR_PAGE_SIZES       (PT_MAX_HUGEPAGE_LEVEL - \
+                                 PT_PAGE_TABLE_LEVEL + 1)
+#define KVM_HPAGE_GFN_SHIFT(x)  (((x) - 1) * 9)
+#define KVM_HPAGE_SHIFT(x)      (PAGE_SHIFT + KVM_HPAGE_GFN_SHIFT(x))
+#define KVM_HPAGE_SIZE(x)       (1UL << KVM_HPAGE_SHIFT(x))
+#define KVM_HPAGE_MASK(x)       (~(KVM_HPAGE_SIZE(x) - 1))
+#define KVM_PAGES_PER_HPAGE(x)  (KVM_HPAGE_SIZE(x) / PAGE_SIZE)
+
+// arch/x86/kvm/mmu/mmu.c
 int kvm_tdp_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
                        bool prefault)
 {
