--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -10,12 +10,14 @@
   - [3.2. MMU相关操作函数初始化: vcpu创建时](#32-mmu相关操作函数初始化-vcpu创建时)
     - [3.2.1. MMU的创建](#321-mmu的创建)
     - [3.2.2. MMU的初始化: vcpu->arch.mmu](#322-mmu的初始化-vcpu-archmmu)
-- [4. 虚拟机的物理内存组织方式](#4-虚拟机的物理内存组织方式)
+- [4. SPT(影子页表/EPT页表)逻辑结构](#4-spt影子页表ept页表逻辑结构)
+  - [未开启大页](#未开启大页)
 - [5. EPT构建过程](#5-ept构建过程)
   - [5.1. EPT页表的建立流程](#51-ept页表的建立流程)
   - [5.2. 虚拟机EPT和CR3初始化](#52-虚拟机ept和cr3初始化)
   - [5.3. EPT异常处理流程](#53-ept异常处理流程)
     - [EPT异常处理入口](#ept异常处理入口)
+    - [kvm_tdp_page_fault(): 建立页表项](#kvm_tdp_page_fault-建立页表项)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -356,13 +358,24 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 所谓初始化就是填充 `vcpu->arch.mmu` 结构体，里面有很多回调函数都会用到
 
-# 4. 虚拟机的物理内存组织方式
+# 4. SPT(影子页表/EPT页表)逻辑结构
 
-先了解下KVM虚拟机的物理内存组织方式，众所周知，**KVM虚拟机**运行在**qemu的进程地址空间**中，所以其实**虚拟机使用的物理地址**是从对应**qemu进程的地址空间中分配**的。
+KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（shadow page table）机制，为了**和之前的代码兼容**，在当前的实现中，**EPT机制**是在**影子页表机制代码**的基础上实现的，所以**EPT**里面的**pte**和之前一样被叫做 `shadow pte`。
 
-具体由一个`kvm_memory_slot`结构管理，**每个虚拟机**的**物理内存**由**多个slot**组成，**每个slot**对应一个`kvm_memory_slot`结构，从结构体的字段可以看出，该结构记录**slot映射**的是**哪些客户物理page**，由于**映射多个页面**，所以有一个`ditty_bitmap`来标识**各个页的状态**，注意这个页是客户机的虚拟page。映射架构如下：
+## 未开启大页
 
-![2020-03-17-16-17-51.png](./images/2020-03-17-16-17-51.png)
+在未开启大页的情况下，**64位**机器上，**影子页表**是**4级**结构，
+
+- **非叶子节点表**的**表项**指向**下一级页表基地址**，如绿色所示；
+- **叶子节点表**的**表项**指向**一个真正的物理页面**，如下图所示：
+
+![2020-03-30-15-43-27.png](./images/2020-03-30-15-43-27.png)
+
+**最开始的根表**的**级别**是`level = 4`，其次是level = 3, 一直到level = 1的表，level1表的表项指向4K的真实物理页面（当然这里只是分配了HPA，还需要配合HOST上的PF分配真实物理页面）；
+
+level4表就是影子页表(EPT)的根表，其物理地址就被记录在VMCS的EPT Pointer中，每个VCPU都有一个EPT Pointer，也就是每个VCPU都有自己的MMU和一套页表。
+
+gaddr就是发生EPT voilation的guest物理地址，GFN就是gaddr对应的页框号，转换公式如下 gfn = gaddr / PAGE_SIZE。gfn是1的倍数。位置关系如上图所示
 
 # 5. EPT构建过程
 
@@ -639,7 +652,11 @@ static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
 }
 ```
 
-这里就会调用上面初始化的`kvm_tdp_page_fault()`, 该函数用于完成EPT表项的建立. 而**GFN**和**PFN**就一个**转换关系**，这就是**影子页表(或EPT)完成的映射**
+这里就会调用上面初始化的`kvm_tdp_page_fault()`, 该函数用于完成EPT表项的建立. 
+
+### kvm_tdp_page_fault(): 建立页表项
+
+而**GFN**和**PFN**就一个**转换关系**，这就是**影子页表(或EPT)完成的映射**
 
 ```cpp
 // arch/x86/include/asm/kvm_host.h
