--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -26,7 +26,7 @@
 * PTE - page table entry，页表项，指向下一级页表或者页的物理地址，以及相应的权限位
 * GPTE - guest pte，客户机页表项，指向GPT中下一级页表或者页的gpa，以及相应的权限位
 * TDP - two dimentional paging（二维分页, 可以是NPT和EPT）
-* SPTE - shadow page table entry, 影子页表项，也就是EPT页表项，指向EPT中下一级页表或者页的hpa，以及相应的权限位
+* SPTE - shadow page table entry, **影子页表项**，也就是**EPT页表项**，指向EPT中下一级页表或者页的hpa，以及相应的权限位
 
 以上唯一需要解释的是spte，在这里被叫做**shadow pte**，如果不了解的话，会很容易和以前的shadow paging机制搞混。
 
@@ -168,7 +168,13 @@ struct kvm_memory_slot {
 };
 ```
 
-虚拟机线性地址被分成若干个`kvm_memory_slot`，**每个memslot**是**不能重叠**的，也就是说每一段内存区间都必须有独立的作用。一般来说Qemu会对RAM、IO memory、High memory等分别注册若干个memslot
+众所周知，**KVM虚拟机**运行在**qemu的进程地址空间**中，所以其实**虚拟机使用的物理地址**是从对应**qemu进程的地址空间中分配**的。
+
+虚拟机**线性地址！！！** 被分成若干个`kvm_memory_slot`，**每个memslot**是**不能重叠**的，也就是说**每一段内存区间**都必须有**独立的作用**。一般来说**Qemu**会对**RAM**、**IO memory**、**High memory**等**分别注册若干个memslot**
+
+而**每个虚拟机**的**物理内存**由**多个slot**组成，**每个slot**对应一个`kvm_memory_slot`结构，从结构体的字段可以看出，该结构记录**slot映射**的是**哪些客户物理page**，由于**映射多个页面**，所以有一个`ditty_bitmap`来标识**各个页的状态**，注意这个页是客户机的虚拟page。映射架构如下：
+
+![2020-03-17-16-17-51.png](./images/2020-03-17-16-17-51.png)
 
 至于`kvm_userspace_memory_region`可以看qemu部分
 
