--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -12,6 +12,7 @@
     - [3.2.2. MMU的初始化: vcpu->arch.mmu](#322-mmu的初始化-vcpu-archmmu)
 - [4. SPT(影子页表/EPT页表)逻辑结构](#4-spt影子页表ept页表逻辑结构)
   - [未开启大页](#未开启大页)
+  - [开启大页](#开启大页)
 - [5. EPT构建过程](#5-ept构建过程)
   - [5.1. EPT页表的建立流程](#51-ept页表的建立流程)
   - [5.2. 虚拟机EPT和CR3初始化](#52-虚拟机ept和cr3初始化)
@@ -364,18 +365,56 @@ KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（sha
 
 ## 未开启大页
 
-在未开启大页的情况下，**64位**机器上，**影子页表**是**4级**结构，
+在**未开启大页**的情况下，**64位**机器上，**影子页表**是**4级**结构，
 
 - **非叶子节点表**的**表项**指向**下一级页表基地址**，如绿色所示；
 - **叶子节点表**的**表项**指向**一个真正的物理页面**，如下图所示：
 
 ![2020-03-30-15-43-27.png](./images/2020-03-30-15-43-27.png)
 
-**最开始的根表**的**级别**是`level = 4`，其次是level = 3, 一直到level = 1的表，level1表的表项指向4K的真实物理页面（当然这里只是分配了HPA，还需要配合HOST上的PF分配真实物理页面）；
+**最开始的根表**的**级别**是`level = 4`，其次是level = 3, 一直到level = 1的表，**level1表**的**表项**指向4K的**真实物理页面**（当然这里**只是分配了HPA**，还需要配合HOST上的PF分配真实物理页面）；
 
-level4表就是影子页表(EPT)的根表，其物理地址就被记录在VMCS的EPT Pointer中，每个VCPU都有一个EPT Pointer，也就是每个VCPU都有自己的MMU和一套页表。
+**level4表**就是**影子页表(EPT**)的**根表**，其**物理地址**就被记录在**VMCS**的`EPT Pointer`中，**每个VCPU**都有一个EPT Pointer，也就是**每个VCPU！！！** 都有自己的**MMU！！！** 和**一套页表！！！**。
 
-gaddr就是发生EPT voilation的guest物理地址，GFN就是gaddr对应的页框号，转换公式如下 gfn = gaddr / PAGE_SIZE。gfn是1的倍数。位置关系如上图所示
+**gaddr**就是发生`EPT voilation`的**guest物理地址**，**GFN**就是gaddr对应的**页框号**，转换公式如下 `gfn = gaddr / PAGE_SIZE`。gfn是1的倍数。位置关系如上图所示
+
+## 开启大页
+
+在开启大页的情况下，64位机器上，这里以2M大页，影子页表3级结构为例说明，如下图所示：
+
+![2020-03-30-15-47-18.png](./images/2020-03-30-15-47-18.png)
+
+在这里，**叶子表**变成了**level 2表**；其他的同普通影子页表相同；
+
+在**2M大页**的情况下，**一个大页内**可以包含**512个小页**。
+
+在KVM的代码中通过`KVM_PAGES_PER_HPAGE(level)`宏可以获得，**level**代表了**第几级页表**是**叶子节点页表**。
+
+```cpp
+
+// arch/x86/include/asm/kvm_host.h
+/* KVM Hugepage definitions for x86 */
+enum {
+        PT_PAGE_TABLE_LEVEL   = 1,
+        PT_DIRECTORY_LEVEL    = 2,
+        PT_PDPE_LEVEL         = 3,
+        /* set max level to the biggest one */
+        PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
+};
+#define KVM_NR_PAGE_SIZES       (PT_MAX_HUGEPAGE_LEVEL - \
+                                 PT_PAGE_TABLE_LEVEL + 1)
+
+/*
+ * level-1 级叶子页表所管理的页面 是 level 级叶子页表所管理的页面大小的 2^9倍。
+ * KVM_HPAGE_GFN_SHIFT 表示以level级页表为叶子页表的情况下，所管理的页面是标准页面的多少倍
+ */
+#define KVM_HPAGE_GFN_SHIFT(x)  (((x) - 1) * 9)
+#define KVM_HPAGE_SHIFT(x)      (PAGE_SHIFT + KVM_HPAGE_GFN_SHIFT(x))
+#define KVM_HPAGE_SIZE(x)       (1UL << KVM_HPAGE_SHIFT(x))
+#define KVM_HPAGE_MASK(x)       (~(KVM_HPAGE_SIZE(x) - 1))
+#define KVM_PAGES_PER_HPAGE(x)  (KVM_HPAGE_SIZE(x) / PAGE_SIZE)
+```
+
 
 # 5. EPT构建过程
 
@@ -659,23 +698,6 @@ static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
 而**GFN**和**PFN**就一个**转换关系**，这就是**影子页表(或EPT)完成的映射**
 
 ```cpp
-// arch/x86/include/asm/kvm_host.h
-/* KVM Hugepage definitions for x86 */
-enum {
-        PT_PAGE_TABLE_LEVEL   = 1,
-        PT_DIRECTORY_LEVEL    = 2,
-        PT_PDPE_LEVEL         = 3,
-        /* set max level to the biggest one */
-        PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
-};
-#define KVM_NR_PAGE_SIZES       (PT_MAX_HUGEPAGE_LEVEL - \
-                                 PT_PAGE_TABLE_LEVEL + 1)
-#define KVM_HPAGE_GFN_SHIFT(x)  (((x) - 1) * 9)
-#define KVM_HPAGE_SHIFT(x)      (PAGE_SHIFT + KVM_HPAGE_GFN_SHIFT(x))
-#define KVM_HPAGE_SIZE(x)       (1UL << KVM_HPAGE_SHIFT(x))
-#define KVM_HPAGE_MASK(x)       (~(KVM_HPAGE_SIZE(x) - 1))
-#define KVM_PAGES_PER_HPAGE(x)  (KVM_HPAGE_SIZE(x) / PAGE_SIZE)
-
 // arch/x86/kvm/mmu/mmu.c
 int kvm_tdp_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
                        bool prefault)
