--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -386,9 +386,9 @@ KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（sha
 
 在这里，**叶子表**变成了**level 2表**；其他的同普通影子页表相同；
 
-在**2M大页**的情况下，**一个大页内**可以包含**512个小页**。
+在**2M大页**的情况下，**一个大页内**可以包含**512个小页**。(一个2M大页是`2^11`KB大小, 一个标准页4K`<2^2>`, 所以 `2^9` 个)
 
-在KVM的代码中通过`KVM_PAGES_PER_HPAGE(level)`宏可以获得，**level**代表了**第几级页表**是**叶子节点页表**。
+一个大页包含的小页的数目, 在KVM的代码中通过`KVM_PAGES_PER_HPAGE(level)`宏可以获得，**level**代表了**第几级页表**是**叶子节点页表**。
 
 ```cpp
 
@@ -405,13 +405,16 @@ enum {
                                  PT_PAGE_TABLE_LEVEL + 1)
 
 /*
- * level-1 级叶子页表所管理的页面 是 level 级叶子页表所管理的页面大小的 2^9倍。
+ * level-1 级叶子页表所管理的页面是 level级叶子页表所管理的页面大小的 2^9倍。
  * KVM_HPAGE_GFN_SHIFT 表示以level级页表为叶子页表的情况下，所管理的页面是标准页面的多少倍
  */
 #define KVM_HPAGE_GFN_SHIFT(x)  (((x) - 1) * 9)
+/*基本页面大小是 PAGE_SHIFT，KVM_HPAGE_GFN_SHIFT(x)是倍数关系*/
 #define KVM_HPAGE_SHIFT(x)      (PAGE_SHIFT + KVM_HPAGE_GFN_SHIFT(x))
+/*当前所管理的页面大小 */
 #define KVM_HPAGE_SIZE(x)       (1UL << KVM_HPAGE_SHIFT(x))
 #define KVM_HPAGE_MASK(x)       (~(KVM_HPAGE_SIZE(x) - 1))
+/*当前所管理的页面，是标准页面的多少倍*/
 #define KVM_PAGES_PER_HPAGE(x)  (KVM_HPAGE_SIZE(x) / PAGE_SIZE)
 ```
 
