--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -11,14 +11,14 @@
     - [3.2.1. MMU的创建](#321-mmu的创建)
     - [3.2.2. MMU的初始化: vcpu->arch.mmu](#322-mmu的初始化-vcpu-archmmu)
 - [4. SPT(影子页表/EPT页表)逻辑结构](#4-spt影子页表ept页表逻辑结构)
-  - [未开启大页](#未开启大页)
-  - [开启大页](#开启大页)
+  - [4.1. 未开启大页](#41-未开启大页)
+  - [4.2. 开启大页](#42-开启大页)
 - [5. EPT构建过程](#5-ept构建过程)
   - [5.1. EPT页表的建立流程](#51-ept页表的建立流程)
   - [5.2. 虚拟机EPT和CR3初始化](#52-虚拟机ept和cr3初始化)
   - [5.3. EPT异常处理流程](#53-ept异常处理流程)
-    - [EPT异常处理入口](#ept异常处理入口)
-    - [kvm_tdp_page_fault(): 建立页表项](#kvm_tdp_page_fault-建立页表项)
+    - [5.3.1. EPT异常处理入口](#531-ept异常处理入口)
+    - [5.3.2. kvm_tdp_page_fault(): 建立页表项](#532-kvm_tdp_page_fault-建立页表项)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -363,7 +363,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（shadow page table）机制，为了**和之前的代码兼容**，在当前的实现中，**EPT机制**是在**影子页表机制代码**的基础上实现的，所以**EPT**里面的**pte**和之前一样被叫做 `shadow pte`。
 
-## 未开启大页
+## 4.1. 未开启大页
 
 在**未开启大页**的情况下，**64位**机器上，**影子页表**是**4级**结构，
 
@@ -378,7 +378,7 @@ KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（sha
 
 **gaddr**就是发生`EPT voilation`的**guest物理地址**，**GFN**就是gaddr对应的**页框号**，转换公式如下 `gfn = gaddr / PAGE_SIZE`。gfn是1的倍数。位置关系如上图所示
 
-## 开启大页
+## 4.2. 开启大页
 
 在开启大页的情况下，64位机器上，这里以2M大页，影子页表3级结构为例说明，如下图所示：
 
@@ -418,6 +418,27 @@ enum {
 #define KVM_PAGES_PER_HPAGE(x)  (KVM_HPAGE_SIZE(x) / PAGE_SIZE)
 ```
 
+gaddr就是发生`EPT voilation`的**guest物理地址**，`fn = gaddr / PAGE_SIZE`，这里的**FN**是**标准页面情况**下，**gaddr的页框号**；如果**一个大页面**中含有**512个标准页面**的话，**大页面**的**起始页框号**就应该是**512的整倍数**，如`0`，`512`, `1024`等。**对FN向下取元整！！！** 就可以得到**大页面的起始页帧号**。如下图
+
+![2020-03-30-16-05-39.png](./images/2020-03-30-16-05-39.png)
+
+举个例子，如果 `fn = 513`，则`gfn = 512`; 如果 `fn = 511`，`gfn = 0`;
+
+转换为数学公式如下：
+
+```
+a = a & ~(b-1) ；
+```
+
+就是**A对B去元整**，得到的是**B的整倍数**。 如  `5 & ~(4-1) = 4`; `5 & ~(8-1) = 0`
+
+这在我们的代码里面也是有体现的
+
+```cpp
+base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(level) - 1);
+```
+
+`KVM_PAGES_PER_HPAGE(level) `按照上面的分析，就是**大页**是**普通页面多少倍**，也就是对其关系；那么这里计算出来的`base_gfn`就是按照**大页倍数对齐后**的**起始gfn编号**。
 
 # 5. EPT构建过程
 
@@ -519,7 +540,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
-### EPT异常处理入口
+### 5.3.1. EPT异常处理入口
 
 **初始状态EPT页表为空**，当**客户机运行**时，其使用的**GVA转化成GPA**后，还需要CPU根据**GPA查找EPT**，从而**定位具体的HPA**，但是由于此时**EPT为空**，所以会引发**缺页中断**，发生**VM-exit**, 此时**CPU进入到根模式**，运行VMM（这里指KVM），进入`vmx_handle_exit`函数, 在KVM中定义了一个**异常处理数组**来处理**对应的VM-exit**
 
@@ -696,7 +717,7 @@ static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
 
 这里就会调用上面初始化的`kvm_tdp_page_fault()`, 该函数用于完成EPT表项的建立. 
 
-### kvm_tdp_page_fault(): 建立页表项
+### 5.3.2. kvm_tdp_page_fault(): 建立页表项
 
 而**GFN**和**PFN**就一个**转换关系**，这就是**影子页表(或EPT)完成的映射**
 
