--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -395,7 +395,9 @@ KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（sha
 // arch/x86/include/asm/kvm_host.h
 /* KVM Hugepage definitions for x86 */
 enum {
+        // 页表项是, 1
         PT_PAGE_TABLE_LEVEL   = 1,
+        // 页目录项是最后一级
         PT_DIRECTORY_LEVEL    = 2,
         PT_PDPE_LEVEL         = 3,
         /* set max level to the biggest one */
@@ -435,10 +437,14 @@ a = a & ~(b-1) ；
 这在我们的代码里面也是有体现的
 
 ```cpp
-base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(level) - 1);
+	gfn_t gfn = gpa >> PAGE_SHIFT; 
+......
+	level = mapping_level(vcpu, gfn);
+	gfn &= ~(KVM_PAGES_PER_HPAGE(level) - 1);
+......
 ```
 
-`KVM_PAGES_PER_HPAGE(level) `按照上面的分析，就是**大页**是**普通页面多少倍**，也就是对其关系；那么这里计算出来的`base_gfn`就是按照**大页倍数对齐后**的**起始gfn编号**。
+`KVM_PAGES_PER_HPAGE(level) `按照上面的分析，就是**大页**是**普通页面多少倍大小**，也就是对其关系；那么这里计算出来的`gfn`就是按照**大页倍数对齐后**的**起始gfn编号**。
 
 # 5. EPT构建过程
 
@@ -731,7 +737,10 @@ int kvm_tdp_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
         for (max_level = PT_MAX_HUGEPAGE_LEVEL;
              max_level > PT_PAGE_TABLE_LEVEL;
              max_level--) {
+                // 一个大页是一个普通页面多少倍大小
+                // 3, 
                 int page_num = KVM_PAGES_PER_HPAGE(max_level);
+                // 按照大页倍数对齐后的起始gfn编号
                 gfn_t base = (gpa >> PAGE_SHIFT) & ~(page_num - 1);
 
                 if (kvm_mtrr_check_gfn_range_consistency(vcpu, base, page_num))
