--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -388,17 +388,17 @@ KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（sha
 
 在**2M大页**的情况下，**一个大页内**可以包含**512个小页**。(一个2M大页是`2^11`KB大小, 一个标准页4K`<2^2>`, 所以 `2^9` 个)
 
-一个大页包含的小页的数目, 在KVM的代码中通过`KVM_PAGES_PER_HPAGE(level)`宏可以获得，**level**代表了**第几级页表**是**叶子节点页表**。
+一个大页包含的小页的数目, 在KVM的代码中通过`KVM_PAGES_PER_HPAGE(level)`宏可以获得，**level**代表了**第几级页表！！！** 是**叶子节点页表！！！**。
 
 ```cpp
-
 // arch/x86/include/asm/kvm_host.h
 /* KVM Hugepage definitions for x86 */
 enum {
-        // 页表项是, 1
+        // 最后一级在属于页表项, 即指向页面, 1
         PT_PAGE_TABLE_LEVEL   = 1,
-        // 页目录项是最后一级
+        // 页目录项是最后一级, 即指向页面, 2
         PT_DIRECTORY_LEVEL    = 2,
+        // 页目录指针项是最后一级, 即指向页面, 3
         PT_PDPE_LEVEL         = 3,
         /* set max level to the biggest one */
         PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
