--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -394,11 +394,11 @@ KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（sha
 // arch/x86/include/asm/kvm_host.h
 /* KVM Hugepage definitions for x86 */
 enum {
-        // 最后一级在属于页表项, 即指向页面, 1
+        // 4K页面, PT(页表)是最后一级表, 里面是页表项, 即指向页面, 1
         PT_PAGE_TABLE_LEVEL   = 1,
-        // 页目录项是最后一级, 即指向页面, 2
+        // 2M大页, PDT(页目录表)是最后一级表, 里面是页目录项, 即指向页面, 2
         PT_DIRECTORY_LEVEL    = 2,
-        // 页目录指针项是最后一级, 即指向页面, 3
+        // 1G大页, PDPT(页目录指针表)是最后一级表, 里面是页目录指针项, 即指向页面, 3
         PT_PDPE_LEVEL         = 3,
         /* set max level to the biggest one */
         PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
@@ -733,16 +733,16 @@ int kvm_tdp_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
                        bool prefault)
 {
         int max_level;
-        // 从 3 开始, 大于1, 也就是3和2
+        // 从 3 开始, 大于1, 也就是3和2, 代表1G大页和2M大页
         for (max_level = PT_MAX_HUGEPAGE_LEVEL;
              max_level > PT_PAGE_TABLE_LEVEL;
              max_level--) {
                 // 一个大页是一个普通页面多少倍大小
-                // 3, 
+                // 1G大页是2^18倍; 2M大页是512倍
                 int page_num = KVM_PAGES_PER_HPAGE(max_level);
-                // 按照大页倍数对齐后的起始gfn编号
+                // gpa按照大页倍数对齐后的起始gfn编号
                 gfn_t base = (gpa >> PAGE_SHIFT) & ~(page_num - 1);
-
+                // 检查gfn(即base)范围一致性, 从而确定
                 if (kvm_mtrr_check_gfn_range_consistency(vcpu, base, page_num))
                         break;
         }
