--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -742,7 +742,8 @@ int kvm_tdp_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
                 int page_num = KVM_PAGES_PER_HPAGE(max_level);
                 // gpa按照大页倍数对齐后的起始gfn编号
                 gfn_t base = (gpa >> PAGE_SHIFT) & ~(page_num - 1);
-                // 检查gfn(即base)范围一致性, 从而确定
+                // 检查gfn(即base)范围一致性, 从而确定最大级别
+                // 得到的max_level是叶子页表, 也就是其项指向页面的那一级??
                 if (kvm_mtrr_check_gfn_range_consistency(vcpu, base, page_num))
                         break;
         }
@@ -763,6 +764,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
         bool lpage_disallowed = exec && is_nx_huge_page_enabled();
         bool map_writable;
         // 虚拟机物理地址右移12位得到虚拟机物理页框号(相对于虚拟机而言)
+        // 标准页面情况下的 gfn
         gfn_t gfn = gpa >> PAGE_SHIFT;
         unsigned long mmu_seq;
         kvm_pfn_t pfn;
@@ -774,7 +776,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
         r = mmu_topup_memory_caches(vcpu);
         if (r)
                 return r;
-        // 大页不开, 1
+        // 大页不开, 那就是4K页面, max_level是最后一级(叶子页表, 也就是其项指向页面的那一级)
         if (lpage_disallowed)
                 max_level = PT_PAGE_TABLE_LEVEL;
         // 快速处理 violation
@@ -784,7 +786,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
 
         mmu_seq = vcpu->kvm->mmu_notifier_seq;
         smp_rmb();
-        // 根据虚拟机物理页框号gfn得到对应的主机虚拟页框号PFN
+        // 根据虚拟机物理页框号gfn和虚拟机物理地址gpa得到qemu中分配的页面主机虚拟页框号PFN(HVA)
         if (try_async_pf(vcpu, prefault, gfn, gpa, &pfn, write, &map_writable))
                 return RET_PF_RETRY;
         // 处理反常的物理页框
