--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -531,10 +531,10 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   ├─ kvm_mmu_do_page_fault(vcpu, cr2_or_gpa, lower_32_bits(error_code), false); // 处理内存访问异常, mmio的见io部分
  |   |   |   |   └─ vcpu->arch.mmu->page_fault(vcpu, cr2_or_gpa, err, prefault);   // EPT下会调用kvm_tdp_page_fault
  |   |   |   |       └─ direct_page_fault(vcpu, gpa, error_code, prefault, max_level, true);   // EPT下会调用kvm_tdp_page_fault
- |   |   |   |           ├─ gfn = gpa >> PAGE_SHIFT;   // 虚拟机物理地址右移12位得到虚拟机物理页框号
+ |   |   |   |           ├─ gfn = gpa >> PAGE_SHIFT;   // 虚拟机物理地址右移12位得到虚拟机物理页框号, 这是标准页面下的 GFN
  |   |   |   |           ├─ mmu_topup_memory_caches(vcpu);   // 分配缓存池
  |   |   |   |           ├─ fast_page_fault();   // 快速page fault处理
- |   |   |   |           ├─ try_async_pf();   // 得到pfn, 主机物理页框号, HPA
+ |   |   |   |           ├─ try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页框号, HPA
  |   |   |   |           |   ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
  |   |   |   |           |   └─ *pfn = __gfn_to_pfn_memslot();   // 得到该gfn(虚拟机页框号)对应的pfn(主机物理页框号), 即GPA到HPA的转换
  |   |   |   |           |        ├─ addr = __gfn_to_hva_many();   // 得到该gfn(虚拟机页框号)对应的主机虚拟地址
@@ -786,7 +786,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
 
         mmu_seq = vcpu->kvm->mmu_notifier_seq;
         smp_rmb();
-        // 根据虚拟机物理页框号gfn和虚拟机物理地址gpa得到qemu中分配的页面主机虚拟页框号PFN(HVA)
+        // 根据虚拟机物理页框号gfn和虚拟机物理地址gpa得到qemu中分配的页面的HVA, 然后得到这个HVA页面的pfn, 当然这只是个pfn, 还需要PF完成真正页面的分配
         if (try_async_pf(vcpu, prefault, gfn, gpa, &pfn, write, &map_writable))
                 return RET_PF_RETRY;
         // 处理反常的物理页框
@@ -814,7 +814,7 @@ out_unlock:
 
 接着调用了`fast_page_fault`尝试快速处理violation，只有当GFN对应的物理页存在且violation是由读写操作引起的，才可以使用快速处理，因为这样不用加`MMU-lock`.
 
-假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据GFN获取对应的PFN，这个过程具体来说需要首先获取GFN对应的slot，转化成HVA，接着就是**正常的HOST地址翻译的过程**了，如果HVA对应的地址并不在内存中，还需要**HOST自己处理缺页中断**。
+假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据**GFN**获取对应的**PFN**，这个过程具体来说需要首先获取GFN对应的slot，转化成HVA，接着就是**正常的HOST地址翻译的过程**了，如果HVA对应的地址并不在内存中，还需要**HOST自己处理缺页中断**。
 
 `__direct_map()`是构建页表的核心函数, 
 
