--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -4,13 +4,13 @@
 <!-- code_chunk_output -->
 
 - [1. 几个缩写](#1-几个缩写)
-- [2. kvm中与内存有关的成员](#2-kvm中与内存有关的成员)
+- [2. kvm中与mmu相关成员](#2-kvm中与mmu相关成员)
+- [kvm_vcpu中与mmu相关成员](#kvm_vcpu中与mmu相关成员)
 - [3. kvm_memslots: 虚拟机所有slot信息](#3-kvm_memslots-虚拟机所有slot信息)
 - [4. kvm_mem_slot 结构体: 一个代表一段空间, GPA -> HVA](#4-kvm_mem_slot-结构体-一个代表一段空间-gpa-hva)
 - [5. kvm_mmu 结构体:](#5-kvm_mmu-结构体)
   - [5.1. kvm_mmu 定义: mmu的操作函数](#51-kvm_mmu-定义-mmu的操作函数)
   - [5.2. kvm_mmu_page: 页表结构](#52-kvm_mmu_page-页表结构)
-- [6. vMMU相关数据结构的关系](#6-vmmu相关数据结构的关系)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -33,7 +33,7 @@
 
 KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（shadow page table）机制，为了**和之前的代码兼容**，在当前的实现中，**EPT机制**是在**影子页表机制代码**的基础上实现的，所以**EPT**里面的**pte**和之前一样被叫做 `shadow pte`，这个会在之后进行详细的说明。
 
-# 2. kvm中与内存有关的成员
+# 2. kvm中与mmu相关成员
 
 ```cpp
 // include/linux/kvm_host.h
@@ -58,6 +58,7 @@ kvm结构体, 每个虚拟机一个，代表一个虚拟机
 
 其中`address_space_id = mem->slot >> 16;`, 详细见`虚拟机物理内存注册`.
 
+# kvm_vcpu中与mmu相关成员
 
 ```cpp
 // include/linux/kvm_host.h
@@ -68,7 +69,99 @@ struct kvm_vcpu {
 };
 ```
 
-`kvm_vcpu`
+`kvm_vcpu`结构体, 对应一个VCPU
+
+- arch成员是架构特性部分，如x86特性部分，arm特定部分等
+
+```cpp
+struct kvm_vcpu_arch {
+        ......
+        /*
+        * Paging state of the vcpu
+        *
+        * If the vcpu runs in guest mode with two level paging this still saves
+        * the paging mode of the l1 guest. This context is always used to
+        * handle faults.
+        */
+        // vcpu以两级页表运行在guest模式下, 这里仍然保存L1虚拟机的页表
+        // 这个用于处理异常
+        struct kvm_mmu *mmu;
+
+        /* Non-nested MMU for L1 */
+        // 非嵌套情况下的虚拟机 mmu
+        struct kvm_mmu root_mmu;
+
+        /* L1 MMU when running nested */
+        // 嵌套情况下的 L1 的mmu
+        struct kvm_mmu guest_mmu;
+
+        /*
+         * Paging state of an L2 guest (used for nested npt)
+         *
+         * This context will save all necessary information to walk page tables
+         * of an L2 guest. This context is only initialized for page table
+         * walking and not for faulting since we never handle l2 page faults on
+         * the host.
+         */
+        // 
+        struct kvm_mmu nested_mmu;
+
+        /*
+         * Pointer to the mmu context currently used for
+         * gva_to_gpa translations.
+         */
+        // 用于 GVA 转换成 GPA
+        struct kvm_mmu *walk_mmu;
+ 
+        struct kvm_mmu_memory_cache mmu_pte_list_desc_cache;
+        struct kvm_mmu_memory_cache mmu_page_cache;
+        struct kvm_mmu_memory_cache mmu_page_header_cache;
+        ......
+```
+
+- mmu成员指向vMMU结构，可以看出vMMU是**每VCPU一个**
+- `walk_mmu`成员指向mmu
+
+注释已经很清楚了，我就不做过多的解释了，说一下三个cache：
+- `mmu_pte_list_desc_cache`：用来分配`struct pte_list_desc`结构，该结构主要用于**反向映射**，参考`rmap_ad`函数，**每个rmapp**指向的就是**一个**`pte_list`。后面介绍反向映射的时候会详细介绍。
+- `mmu_page_cache`：用来**分配spt页结构**，spt页结构是存储`spt paging structure`的页，对应`kvm_mmu_page.spt`
+- `mmu_page_header_cache`：用来分配`struct kvm_mmu_page`结构，从该cache分配的页面可能会调用**kmem_cache机制**来分配
+
+这三个cache使用的是`kvm_mmu_memory_cache`结构，该结构是KVM定义的cache结构，进一步优化了MMU分配的效率。有**两个对应的kmem_cache结构**：
+
+```cpp
+static struct kmem_cache *pte_list_desc_cache;
+static struct kmem_cache *mmu_page_header_cache;
+```
+
+他们分别对应`mmu_pte_list_desc_cache`和`mmu_page_header_cache`，也就是说如果这**两个cache**中缓存的**object数目不够**，则会从上述对应的`kmem_cache`中获取，对应的代码可以参考函数`mmu_topup_memory_cache`；
+
+```cpp
+static int mmu_topup_memory_cache(struct kvm_mmu_memory_cache *cache,
+                                  struct kmem_cache *base_cache, int min)
+{
+        void *obj;
+
+        if (cache->nobjs >= min)
+                return 0;
+        while (cache->nobjs < ARRAY_SIZE(cache->objects)) {
+                obj = kmem_cache_zalloc(base_cache, GFP_KERNEL_ACCOUNT);
+                if (!obj)
+                        return cache->nobjs >= min ? 0 : -ENOMEM;
+                cache->objects[cache->nobjs++] = obj;
+        }
+        return 0;
+}
+```
+
+而`mmu_page_cache`中的object数目不够时，则调用`mmu_topup_memory_cache_page`函数，其中直接调用了`__get_free_page`函数来获得页面。在一些**初始化函数**中，需要**初始化这些cache**以便**加速运行时的分配**，初始化函数为`mmu_topup_memory_caches`，该初始化过程在**mmu page fault处理函数**（如`tdp_page_fault`）、**MMU初始化函数**（`kvm_mmu_load`）和**写SPT的pte函数**（`kvm_mmu_pte_write`）中被调用。
+
+
+![2020-03-20-10-46-36.png](./images/2020-03-20-10-46-36.png)
+
+从上图可以看到，`struct kvm_mmu`是`struct kvm_vcpu_arch`的一个字段。
+
+![2020-03-30-17-16-04.png](./images/2020-03-30-17-16-04.png)
 
 # 3. kvm_memslots: 虚拟机所有slot信息
 
@@ -405,98 +498,6 @@ struct kvm_mmu_page {
         atomic_t write_flooding_count;
 };
 ```
-
-
-# 6. vMMU相关数据结构的关系
-
-![2020-03-20-10-46-36.png](./images/2020-03-20-10-46-36.png)
-
-从上图可以看到，`struct kvm_mmu`是`struct kvm_vcpu_arch`的一个字段。
-
-![2020-03-30-17-16-04.png](./images/2020-03-30-17-16-04.png)
-
-vcpu->arch中与MMU相关的结构：
-
-```cpp
-struct kvm_vcpu_arch {
-        ......
-        /*
-        * Paging state of the vcpu
-        *
-        * If the vcpu runs in guest mode with two level paging this still saves
-        * the paging mode of the l1 guest. This context is always used to
-        * handle faults.
-        */
-        // vcpu以两级页表运行在guest模式下, 这里仍然保存L1虚拟机的页表
-        // 这个用于处理异常
-        struct kvm_mmu *mmu;
-
-        /* Non-nested MMU for L1 */
-        // 非嵌套情况下的虚拟机 mmu
-        struct kvm_mmu root_mmu;
-
-        /* L1 MMU when running nested */
-        // 嵌套情况下的 L1 的mmu
-        struct kvm_mmu guest_mmu;
-
-        /*
-         * Paging state of an L2 guest (used for nested npt)
-         *
-         * This context will save all necessary information to walk page tables
-         * of an L2 guest. This context is only initialized for page table
-         * walking and not for faulting since we never handle l2 page faults on
-         * the host.
-         */
-        // 
-        struct kvm_mmu nested_mmu;
-
-        /*
-         * Pointer to the mmu context currently used for
-         * gva_to_gpa translations.
-         */
-        // 用于 GVA 转换成 GPA
-        struct kvm_mmu *walk_mmu;
- 
-        struct kvm_mmu_memory_cache mmu_pte_list_desc_cache;
-        struct kvm_mmu_memory_cache mmu_page_cache;
-        struct kvm_mmu_memory_cache mmu_page_header_cache;
-        ......
-```
-
-注释已经很清楚了，我就不做过多的解释了，说一下三个cache：
-- `mmu_pte_list_desc_cache`：用来分配`struct pte_list_desc`结构，该结构主要用于**反向映射**，参考`rmap_ad`函数，**每个rmapp**指向的就是**一个**`pte_list`。后面介绍反向映射的时候会详细介绍。
-- `mmu_page_cache`：用来**分配spt页结构**，spt页结构是存储`spt paging structure`的页，对应`kvm_mmu_page.spt`
-- `mmu_page_header_cache`：用来分配`struct kvm_mmu_page`结构，从该cache分配的页面可能会调用**kmem_cache机制**来分配
-
-这三个cache使用的是`kvm_mmu_memory_cache`结构，该结构是KVM定义的cache结构，进一步优化了MMU分配的效率。有**两个对应的kmem_cache结构**：
-
-```cpp
-static struct kmem_cache *pte_list_desc_cache;
-static struct kmem_cache *mmu_page_header_cache;
-```
-
-他们分别对应`mmu_pte_list_desc_cache`和`mmu_page_header_cache`，也就是说如果这**两个cache**中缓存的**object数目不够**，则会从上述对应的`kmem_cache`中获取，对应的代码可以参考函数`mmu_topup_memory_cache`；
-
-```cpp
-static int mmu_topup_memory_cache(struct kvm_mmu_memory_cache *cache,
-                                  struct kmem_cache *base_cache, int min)
-{
-        void *obj;
-
-        if (cache->nobjs >= min)
-                return 0;
-        while (cache->nobjs < ARRAY_SIZE(cache->objects)) {
-                obj = kmem_cache_zalloc(base_cache, GFP_KERNEL_ACCOUNT);
-                if (!obj)
-                        return cache->nobjs >= min ? 0 : -ENOMEM;
-                cache->objects[cache->nobjs++] = obj;
-        }
-        return 0;
-}
-```
-
-而`mmu_page_cache`中的object数目不够时，则调用`mmu_topup_memory_cache_page`函数，其中直接调用了`__get_free_page`函数来获得页面。在一些**初始化函数**中，需要**初始化这些cache**以便**加速运行时的分配**，初始化函数为`mmu_topup_memory_caches`，该初始化过程在**mmu page fault处理函数**（如`tdp_page_fault`）、**MMU初始化函数**（`kvm_mmu_load`）和**写SPT的pte函数**（`kvm_mmu_pte_write`）中被调用。
-
 
 
 # 7. 参考
