--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -5,12 +5,12 @@
 
 - [1. 几个缩写](#1-几个缩写)
 - [2. kvm中与mmu相关成员](#2-kvm中与mmu相关成员)
-- [kvm_vcpu中与mmu相关成员](#kvm_vcpu中与mmu相关成员)
-- [3. kvm_memslots: 虚拟机所有slot信息](#3-kvm_memslots-虚拟机所有slot信息)
-- [4. kvm_mem_slot 结构体: 一个代表一段空间, GPA -> HVA](#4-kvm_mem_slot-结构体-一个代表一段空间-gpa-hva)
-- [5. kvm_mmu 结构体:](#5-kvm_mmu-结构体)
-  - [5.1. kvm_mmu 定义: mmu的操作函数](#51-kvm_mmu-定义-mmu的操作函数)
-  - [5.2. kvm_mmu_page: 页表结构](#52-kvm_mmu_page-页表结构)
+- [3. kvm_vcpu中与mmu相关成员](#3-kvm_vcpu中与mmu相关成员)
+- [4. kvm_memslots: 虚拟机所有slot信息](#4-kvm_memslots-虚拟机所有slot信息)
+- [5. kvm_mem_slot 结构体: 一个代表一段空间, GPA -> HVA](#5-kvm_mem_slot-结构体-一个代表一段空间-gpa-hva)
+- [6. kvm_mmu 结构体:](#6-kvm_mmu-结构体)
+  - [6.1. kvm_mmu 定义: mmu的操作函数](#61-kvm_mmu-定义-mmu的操作函数)
+  - [6.2. kvm_mmu_page: 页表结构](#62-kvm_mmu_page-页表结构)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -58,7 +58,7 @@ kvm结构体, 每个虚拟机一个，代表一个虚拟机
 
 其中`address_space_id = mem->slot >> 16;`, 详细见`虚拟机物理内存注册`.
 
-# kvm_vcpu中与mmu相关成员
+# 3. kvm_vcpu中与mmu相关成员
 
 ```cpp
 // include/linux/kvm_host.h
@@ -119,7 +119,7 @@ struct kvm_vcpu_arch {
         ......
 ```
 
-- mmu成员指向vMMU结构，可以看出vMMU是**每VCPU一个**
+- mmu成员指向**vMMU结构**，可以看出vMMU是**每VCPU一个**
 - `walk_mmu`成员指向mmu
 
 注释已经很清楚了，我就不做过多的解释了，说一下三个cache：
@@ -163,7 +163,7 @@ static int mmu_topup_memory_cache(struct kvm_mmu_memory_cache *cache,
 
 ![2020-03-30-17-16-04.png](./images/2020-03-30-17-16-04.png)
 
-# 3. kvm_memslots: 虚拟机所有slot信息
+# 4. kvm_memslots: 虚拟机所有slot信息
 
 一个`struct kvm`代表一个虚拟机, memslots是该虚拟机所有内存条, 注意最大`KVM_ADDRESS_SPACE_NUM`(这里是1), 用于将**GPA转换为HVA**. 
 
@@ -224,7 +224,7 @@ static struct kvm_memslots *kvm_alloc_memslots(void)
 }
 ```
 
-# 4. kvm_mem_slot 结构体: 一个代表一段空间, GPA -> HVA
+# 5. kvm_mem_slot 结构体: 一个代表一段空间, GPA -> HVA
 
 由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
 
@@ -292,9 +292,9 @@ struct kvm_memory_slot {
 
 至于`kvm_userspace_memory_region`可以看qemu部分
 
-# 5. kvm_mmu 结构体:
+# 6. kvm_mmu 结构体:
 
-## 5.1. kvm_mmu 定义: mmu的操作函数
+## 6.1. kvm_mmu 定义: mmu的操作函数
 
 ```cpp
 /*
@@ -440,7 +440,7 @@ union kvm_mmu_page_role {
 };
 ```
 
-## 5.2. kvm_mmu_page: 页表结构
+## 6.2. kvm_mmu_page: 页表结构
 
 kvm_mmu_page结构是KVM MMU中最重要的结构之一，其存储了KVM MMU页表的结构
 
