--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -321,6 +321,7 @@ struct kvm_mmu {
         void (*update_pte)(struct kvm_vcpu *vcpu, struct kvm_mmu_page *sp,
                            u64 *spte, const void *pte);
         // 存储paging structure中根目录的地址(如EPT中的EPTP), 这是HPA
+        // 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的EPT_pointer
         hpa_t root_hpa;
         // 虚拟机本身页表的cr3地址, GPA
         gpa_t root_cr3;
