--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -8,9 +8,9 @@
 - [3. kvm_vcpu中与mmu相关成员](#3-kvm_vcpu中与mmu相关成员)
 - [4. kvm_memslots: 虚拟机所有slot信息](#4-kvm_memslots-虚拟机所有slot信息)
 - [5. kvm_mem_slot 结构体: 一个代表一段空间, GPA -> HVA](#5-kvm_mem_slot-结构体-一个代表一段空间-gpa-hva)
-- [6. kvm_mmu 结构体:](#6-kvm_mmu-结构体)
+- [6. kvm_mmu 结构体: vMMU数据结构](#6-kvm_mmu-结构体-vmmu数据结构)
   - [6.1. kvm_mmu 定义: mmu的操作函数](#61-kvm_mmu-定义-mmu的操作函数)
-  - [6.2. kvm_mmu_page: 页表结构](#62-kvm_mmu_page-页表结构)
+  - [6.2. kvm_mmu_page: 影子页表页的管理结构](#62-kvm_mmu_page-影子页表页的管理结构)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -292,7 +292,7 @@ struct kvm_memory_slot {
 
 至于`kvm_userspace_memory_region`可以看qemu部分
 
-# 6. kvm_mmu 结构体:
+# 6. kvm_mmu 结构体: vMMU数据结构
 
 ## 6.1. kvm_mmu 定义: mmu的操作函数
 
@@ -326,10 +326,13 @@ struct kvm_mmu {
         // 虚拟机本身页表的cr3地址, GPA
         gpa_t root_cr3;
         // 创建 mmu 页面时候使用的基本的 page role
+        // 里面设置了vMMU角色所代表的一些硬件特性，如是否开启了NX，是否开启了SMEP等
         union kvm_mmu_role mmu_role;
         // host paging structure中根目录的级别(如64位支持paging可以支持level=4的页结构)
+        // guest中页表的级别，根据VCPU特性不同而不同，如开启long mode就是4，开启PAE的就是3等等
         u8 root_level;
         // SPT Paging Structure中根目录的级别(如64位支持paging的系统可以支持level=4的EPT页结构)
+        // 就是影子页表的级数，EPT情况下这个是4
         u8 shadow_root_level;
         u8 ept_ad;
         // 该MMU是否保证存储的页结构和VCPU使用的页结构的一致性。
@@ -441,7 +444,7 @@ union kvm_mmu_page_role {
 };
 ```
 
-## 6.2. kvm_mmu_page: 页表结构
+## 6.2. kvm_mmu_page: 影子页表页的管理结构
 
 kvm_mmu_page结构是KVM MMU中最重要的结构之一，其存储了KVM MMU页表的结构
 
@@ -471,6 +474,7 @@ struct kvm_mmu_page {
         // 在直接映射中存储线性地址的基地址；在非直接映射中存储guest page table，该PT包含了由该页映射的translation。非直接映射不常见
         gfn_t gfn;
         // 对应的SPT/EPT页地址，SPT/EPT页的struct page结构中page->private域会反向指向该struct kvm_mmu_page。该域可以指向一个lower-level shadow pages，也可以指向真正的数据page。
+        // 指向影子页表页，页中被分为多个spte。影子页表用的页面成为shadow page，一个页面中分为多个表项，每个表项成为spte，注意不论哪个级别，表项都称为spte
         u64 *spt;
         /* hold the gfn of each spte inside spt */
         gfn_t *gfns;
