--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -417,6 +417,7 @@ union kvm_mmu_page_role {
         u32 word;
         struct {
                 // 该页表页的层级
+                // kvm_mmu_page结构管理的页面可以作为影子页表中任何一个level的页表。也就是影子页表所代表的角色不同，有时候是level1 有时候是level4。其所管理的页面被用作哪个界别是靠role.level区分的。
                 unsigned level:4;
                 unsigned gpte_is_8_bytes:1;
                 unsigned quadrant:2;
@@ -477,6 +478,7 @@ struct kvm_mmu_page {
         // 指向影子页表页，页中被分为多个spte。影子页表用的页面成为shadow page，一个页面中分为多个表项，每个表项成为spte，注意不论哪个级别，表项都称为spte
         u64 *spt;
         /* hold the gfn of each spte inside spt */
+        // 每级的页表页都会管理GUEST物理地址空间的一部分，这段GUEST物理地址空间的起止地址对应的GFN就在这个成员中被记录下来。当通过gaddr遍历影子页表页的时候，就会根据gaddr算出gfn，然后看gfn落在每级中的哪个spte内，从而确定使用哪个spte，然后用spte来定位出下一级页表地址或pfn
         gfn_t *gfns;
         // 该页被多少个vcpu作为根页结构
         int root_count;          /* Currently serving as active root */
