--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -7,11 +7,10 @@
 - [2. kvm_memslots: 虚拟机所有slot信息](#2-kvm_memslots-虚拟机所有slot信息)
 - [3. kvm_mem_slot 结构体: 一个代表一段空间, GPA -> HVA](#3-kvm_mem_slot-结构体-一个代表一段空间-gpa-hva)
 - [4. kvm_mmu 结构体: vMMU数据结构](#4-kvm_mmu-结构体-vmmu数据结构)
-  - [4.1. kvm_mmu 定义: mmu的操作函数](#41-kvm_mmu-定义-mmu的操作函数)
-  - [4.2. kvm_mmu_page: 影子页表页的管理结构](#42-kvm_mmu_page-影子页表页的管理结构)
-- [5. kvm中与mmu相关成员](#5-kvm中与mmu相关成员)
-- [6. kvm_vcpu中与mmu相关成员](#6-kvm_vcpu中与mmu相关成员)
-- [7. 参考](#7-参考)
+- [5. kvm_mmu_page: 影子页表页的管理结构](#5-kvm_mmu_page-影子页表页的管理结构)
+- [6. kvm中与mmu相关成员](#6-kvm中与mmu相关成员)
+- [7. kvm_vcpu中与mmu相关成员](#7-kvm_vcpu中与mmu相关成员)
+- [8. 参考](#8-参考)
 
 <!-- /code_chunk_output -->
 
@@ -164,8 +163,6 @@ struct kvm_memory_slot {
 
 # 4. kvm_mmu 结构体: vMMU数据结构
 
-## 4.1. kvm_mmu 定义: mmu的操作函数
-
 ```cpp
 /*
  * x86 supports 4 paging modes (5-level 64-bit, 4-level 64-bit, 3-level 32-bit,
@@ -315,7 +312,7 @@ union kvm_mmu_page_role {
 };
 ```
 
-## 4.2. kvm_mmu_page: 影子页表页的管理结构
+# 5. kvm_mmu_page: 影子页表页的管理结构
 
 kvm_mmu_page结构是KVM MMU中最重要的结构之一，其存储了KVM MMU页表的结构
 
@@ -375,7 +372,10 @@ struct kvm_mmu_page {
         atomic_t write_flooding_count;
 };
 ```
-# 5. kvm中与mmu相关成员
+
+影子页表页，shadow page，就是**装载影子页表**的**页面**，**每个页面**中分为**多个表项**，**每个表项**称为**spte**，注意不论哪个级别，表项都称为spte。
+
+# 6. kvm中与mmu相关成员
 
 ```cpp
 // include/linux/kvm_host.h
@@ -400,7 +400,7 @@ kvm结构体, 每个虚拟机一个，代表一个虚拟机
 
 其中`address_space_id = mem->slot >> 16;`, 详细见`虚拟机物理内存注册`.
 
-# 6. kvm_vcpu中与mmu相关成员
+# 7. kvm_vcpu中与mmu相关成员
 
 ```cpp
 // include/linux/kvm_host.h
@@ -505,6 +505,6 @@ static int mmu_topup_memory_cache(struct kvm_mmu_memory_cache *cache,
 
 ![2020-03-30-17-16-04.png](./images/2020-03-30-17-16-04.png)
 
-# 7. 参考
+# 8. 参考
 
 https://blog.csdn.net/leoufung/article/details/52639876?depth_1-utm_source=distribute.pc_relevant.none-task&utm_source=distribute.pc_relevant.none-task
