--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -181,8 +181,8 @@ struct kvm {
 
 kvm结构体, 每个虚拟机一个，代表一个虚拟机
 
-- arch成员是**虚拟机级别**的**arch特性**，其中通过**hash和链表**会将`kvm_mmu_page`结构管理起来，以后通过**gfn**就可以**快速索引**到一个**gfn地址所用的页表页**（`kvm_mmu_page`）
-- vcpus成员指向一组虚拟机内的VCPU结构
+- **arch**成员是**虚拟机级别**的**arch特性**，其中通过**hash和链表**会将`kvm_mmu_page`结构管理起来，以后通过**gfn**就可以**快速索引**到一个**gfn地址所用的页表页**（`kvm_mmu_page`）
+- **vcpus**成员指向一组虚拟机内的VCPU结构
 
 其中`address_space_id = mem->slot >> 16;`, 详细见`虚拟机物理内存注册`.
 
@@ -199,7 +199,7 @@ struct kvm_vcpu {
 
 `kvm_vcpu`结构体, 对应一个VCPU
 
-- arch成员是架构特性部分，如x86特性部分，arm特定部分等
+- arch成员是**架构特性部分**，如x86特性部分，arm特定部分等
 
 ```cpp
 struct kvm_vcpu_arch {
