--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
@@ -636,11 +636,11 @@ xml配置文件为：
 对vCPU的分配，可以有更细粒度的配置，如下：
 
 ```xml
-<domain>￼
-    ...￼
-    <vcpu placement='static' cpuset="1-4,^3,6" current="1">2</vcpu>￼
-    ...￼
-</domain>
+<domain>
+    ...
+    <vcpu placement='static' cpuset="1-4,^3,6" current="1">2</vcpu>
+    ...
+</domain
 ```
 
 **cpuset**表示允许到**哪些物理CPU上执行**，这里表示客户机的**两个vCPU**被允许调度到**1、2、4、6号物理CPU**上执行（\^3表示**排除3号**）；而current表示**启动客户机**时**只给1个vCPU**，最多可以增加到使用2个vCPU。
@@ -648,13 +648,13 @@ xml配置文件为：
 当然，libvirt还提供**cputune标签**来对CPU的分配进行**更多调节**，如下：
 
 ```xml
-<domain>￼
-    ...￼
-    <cputune>￼
-        <vcpupin vcpu="0" cpuset="1"/>￼
-        <vcpupin vcpu="1" cpuset="2,3"/>￼
-        <vcpupin vcpu="2" cpuset="4"/>￼
-        <vcpupin vcpu="3" cpuset="5"/>￼
+<domain>
+    ...
+    <cputune>
+        <vcpupin vcpu="0" cpuset="1"/>
+        <vcpupin vcpu="1" cpuset="2,3"/>
+        <vcpupin vcpu="2" cpuset="4"/>
+        <vcpupin vcpu="3" cpuset="5"/>
         <emulatorpin cpuset="1-3"/>￼
         <shares>2048</shares>￼
         <period>1000000</period>￼
