--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
@@ -655,14 +655,14 @@ xml配置文件为：
         <vcpupin vcpu="1" cpuset="2,3"/>
         <vcpupin vcpu="2" cpuset="4"/>
         <vcpupin vcpu="3" cpuset="5"/>
-        <emulatorpin cpuset="1-3"/>￼
-        <shares>2048</shares>￼
-        <period>1000000</period>￼
-        <quota>-1</quota>￼
-        <emulator_period>1000000</emulator_period>￼
-        <emulator_quota>-1</emulator_quota>￼
-    </cputune>￼
-    ...￼
+        <emulatorpin cpuset="1-3"/>
+        <shares>2048</shares>
+        <period>1000000</period>
+        <quota>-1</quota>
+        <emulator_period>1000000</emulator_period>
+        <emulator_quota>-1</emulator_quota>
+    </cputune>
+    ...
 </domain>
 ```
 
