--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -543,6 +543,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配
  |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
+ |   |   |   |               ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
@@ -787,6 +788,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
         mmu_seq = vcpu->kvm->mmu_notifier_seq;
         smp_rmb();
         // 根据虚拟机物理页框号gfn和虚拟机物理地址gpa得到qemu中分配的页面的HVA, 然后得到这个HVA页面的pfn, 当然这只是个pfn, 还需要PF完成真正页面的分配
+        // 得到pfn, 主机物理页框号
         if (try_async_pf(vcpu, prefault, gfn, gpa, &pfn, write, &map_writable))
                 return RET_PF_RETRY;
         // 处理反常的物理页框
